--- a/collated/main/A0139343E.md
+++ b/collated/main/A0139343E.md
@@ -75,12 +75,12 @@ public class ExportCommand extends Command {
                 Config config = MainApp.getInstance().getConfig();
                 StorageManager storageManager = (StorageManager) MainApp.getInstance().getStorage();
                 ToDoListStorage toDoListStorage = storageManager.getToDoListStorage();
+                String currentFilePath = config.getToDoListFilePath();
+                ReadOnlyToDoList toDoList = toDoListStorage.readToDoList().get();
 
                 // set new file path
                 // copy data to new file
                 // set back file path
-                String currentFilePath = config.getToDoListFilePath();
-                ReadOnlyToDoList toDoList = toDoListStorage.readToDoList().get();
                 storageManager.setToDoListFilePath(filePath);
                 toDoListStorage.saveToDoList(toDoList);
                 storageManager.setToDoListFilePath(currentFilePath);
@@ -109,6 +109,7 @@ public class ExportCommand extends Command {
 public class FindCommand extends Command {
 
     public static final String COMMAND_WORD = "find";
+    public static final String SHORT_COMMAND_WORD = "f";
 
     public static final String MESSAGE_USAGE = COMMAND_WORD + ": Finds all tasks whose names,"
             + " descriptions or tags contain any of "
@@ -168,20 +169,13 @@ public class ImportCommand extends Command {
                         + String.format(MESSAGE_IMPORT_FAILURE, filePath).toString();
                 return new CommandResult(result);
             } else {
-                Config config = MainApp.getInstance().getConfig();
-                Model model = MainApp.getInstance().getModel();
-                StorageManager storageManager = (StorageManager) MainApp.getInstance().getStorage();
 
-                config.setToDoListFilePath(filePath);
-                ConfigUtil.saveConfig(config, Config.DEFAULT_CONFIG_FILE);
+                Config config = MainApp.getInstance().getConfig();
+                saveNewConfig(config);
 
                 String updatedFilePath = config.getToDoListFilePath();
-                storageManager.setToDoListFilePath(updatedFilePath);
-                ToDoListStorage toDoListStorage = storageManager.getToDoListStorage();
-                ReadOnlyToDoList toDoList = toDoListStorage.readToDoList().get();
-                toDoListStorage.saveToDoList(toDoList);
-                model.resetData(toDoList);
-                MainWindow.getStatusBarFooter().setSaveLocation(updatedFilePath);
+                saveNewStorage(updatedFilePath);
+                updateFooter(updatedFilePath);
             }
 
         } catch (IOException ioe) {
@@ -194,6 +188,38 @@ public class ImportCommand extends Command {
 
     public void setIsOverWriting(boolean result) {
         this.isOverWriting = result;
+    }
+
+    /**
+     * set to new path and save new updates into config.json.
+     * @param config config used by MainApp.
+     */
+    private void saveNewConfig(Config config) throws IOException {
+        config.setToDoListFilePath(filePath);
+        ConfigUtil.saveConfig(config, Config.DEFAULT_CONFIG_FILE);
+    }
+
+    /**
+     * set new path and copy data to new file.
+     * @param updatedFilePath location to be saved for new file.
+     * @return
+     */
+    private void saveNewStorage(String updatedFilePath) throws IOException, DataConversionException {
+        StorageManager storageManager = (StorageManager) MainApp.getInstance().getStorage();
+        Model model = MainApp.getInstance().getModel();
+        storageManager.setToDoListFilePath(updatedFilePath);
+        ToDoListStorage toDoListStorage = storageManager.getToDoListStorage();
+        ReadOnlyToDoList toDoList = toDoListStorage.readToDoList().get();
+        toDoListStorage.saveToDoList(toDoList);
+        model.resetData(toDoList);
+    }
+
+    /**
+     * updates the footer that shows current storage location.
+     * @param updatedFilePath latest file location for storage.
+     */
+    private void updateFooter(String updatedFilePath) {
+        MainWindow.getStatusBarFooter().setSaveLocation(updatedFilePath);
     }
 
 }
@@ -247,22 +273,11 @@ public class SaveToCommand extends Command {
             } else {
 
                 Config config = MainApp.getInstance().getConfig();
-                StorageManager storageManager = (StorageManager) MainApp.getInstance().getStorage();
-                ToDoListStorage toDoListStorage = storageManager.getToDoListStorage();
+                saveNewConfig(config);
 
-                // set to new path
-                // save new updates into config.json
-                config.setToDoListFilePath(filePath);
-                ConfigUtil.saveConfig(config, Config.DEFAULT_CONFIG_FILE);
-
-                // set new path
-                // copy data to new file
                 String updatedFilePath = config.getToDoListFilePath();
-                ReadOnlyToDoList toDoList = toDoListStorage.readToDoList().get();
-                storageManager.setToDoListFilePath(updatedFilePath);
-                toDoListStorage.saveToDoList(toDoList);
-
-                MainWindow.getStatusBarFooter().setSaveLocation(updatedFilePath);
+                saveNewStorage(updatedFilePath);
+                updateFooter(updatedFilePath);
             }
         } catch (IOException ioe) {
             return new CommandResult(MESSAGE_SAVETO_FAILURE + StringUtil.getDetails(ioe));
@@ -274,6 +289,37 @@ public class SaveToCommand extends Command {
 
     public void setIsOverWriting(boolean result) {
         this.isOverWriting = result;
+    }
+
+    /**
+     * set to new path and save new updates into config.json.
+     * @param config config used by MainApp.
+     */
+    private void saveNewConfig(Config config) throws IOException {
+        config.setToDoListFilePath(filePath);
+        ConfigUtil.saveConfig(config, Config.DEFAULT_CONFIG_FILE);
+    }
+
+    /**
+     * set new path and copy data to new file.
+     * @param updatedFilePath location to be saved for new file.
+     * @return
+     */
+    private void saveNewStorage(String updatedFilePath) throws IOException, DataConversionException {
+        StorageManager storageManager = (StorageManager) MainApp.getInstance().getStorage();
+        ToDoListStorage toDoListStorage = storageManager.getToDoListStorage();
+        ReadOnlyToDoList toDoList = toDoListStorage.readToDoList().get();
+
+        storageManager.setToDoListFilePath(updatedFilePath);
+        toDoListStorage.saveToDoList(toDoList);
+    }
+
+    /**
+     * updates the footer that shows current storage location.
+     * @param updatedFilePath latest file location for storage.
+     */
+    private void updateFooter(String updatedFilePath) {
+        MainWindow.getStatusBarFooter().setSaveLocation(updatedFilePath);
     }
 
 }
@@ -307,6 +353,7 @@ public class DateTimeParser {
         // Input exist. Try to parse it using Natty.
         Parser parser = new Parser();
 
+        // parse() is a method from natty.
         List<DateGroup> dateGroups = parser.parse(input);
         if (dateGroups.isEmpty()) {
             throw new IllegalValueException(MESSAGE_DATE_INPUT_CONSTRAINTS);
@@ -450,6 +497,32 @@ public class FileTransferCommandParser {
                 isXmlFormat(args);
     }
 
+```
+###### /java/seedu/onetwodo/logic/parser/FindCommandParser.java
+``` java
+/**
+ * Parses input arguments and creates a new FindCommand object
+ */
+public class FindCommandParser {
+
+    /**
+     * Parses the given {@code String} of arguments in the context of the FindCommand
+     * and returns an FindCommand object for execution.
+     */
+    public Command parse(String args) {
+        final Matcher matcher = KEYWORDS_ARGS_FORMAT.matcher(args.trim());
+        if (!matcher.matches()) {
+            return new IncorrectCommand(
+                    String.format(MESSAGE_INVALID_COMMAND_FORMAT, FindCommand.MESSAGE_USAGE));
+        }
+
+        // keywords delimited by whitespace or commas
+        final String[] keywords = matcher.group("keywords").split("\\s*(,|\\s)\\s*");
+        final Set<String> keywordSet = new HashSet<>(Arrays.asList(keywords));
+        return new FindCommand(keywordSet);
+    }
+
+}
 ```
 ###### /java/seedu/onetwodo/logic/parser/ImportCommandParser.java
 ``` java
@@ -619,6 +692,85 @@ public class SaveToCommandParser extends FileTransferCommandParser {
 ###### /java/seedu/onetwodo/model/ModelManager.java
 ``` java
     /**
+     * Undone a completed task. If it does not recur, undone it normally.
+     *
+     * If undone a recurring task with its original task being edited, it will have no parent.
+     * It will be added back as an individual non-recurring task (to keep all tasks info).
+     *
+     * If undone a non-latest completed recurring task, it will also be added back as an
+     * individual non-recurring task.
+     *
+     * If undone a latest completed recurring task, it will replace
+     * the original task with its date reverted back by the correct amount.
+     */
+    @Override
+    public synchronized void undoneTask(ReadOnlyTask taskToUncomplete)
+            throws IllegalValueException, TaskNotFoundException {
+
+        if (taskToUncomplete.getDoneStatus() == false) {
+            throw new IllegalValueException(UndoneCommand.MESSAGE_UNDONE_UNDONE_TASK);
+        }
+        ToDoList copiedCurrentToDoList = new ToDoList(this.toDoList);
+        Task copiedTask = new Task(taskToUncomplete);
+
+        if (!taskToUncomplete.hasRecur()) {
+            undoneNonRecur(taskToUncomplete);
+
+        }  else {
+            copiedTask.updateTaskRecurDate(true);
+            copiedTask.setUndone();
+            ReadOnlyTask taskToCheck = copiedTask;
+
+            if (toDoList.contains(taskToCheck)) {
+                int index = toDoList.getTaskList().indexOf(taskToCheck);
+                if (toDoList.getTaskList().get(index).getDoneStatus() == false) {
+                    undoneLatestRecur(taskToUncomplete, taskToCheck);
+                } else {
+                    undoneNonLatestRecur(taskToUncomplete);
+                }
+            } else {
+                undoneNonParentRecur(taskToUncomplete);
+            }
+        }
+
+        history.saveUndoInformationAndClearRedoHistory(UndoneCommand.COMMAND_WORD,
+                taskToUncomplete, copiedCurrentToDoList);
+        indicateToDoListChanged();
+    }
+
+    private void undoneNonRecur(ReadOnlyTask taskToUncomplete) {
+        toDoList.undoneTask(taskToUncomplete);
+    }
+
+    private void undoneLatestRecur(ReadOnlyTask taskToUncomplete, ReadOnlyTask taskToRevertBackward)
+            throws TaskNotFoundException {
+
+        toDoList.removeTask(taskToUncomplete);
+        toDoList.backwardRecur(taskToRevertBackward);
+    }
+
+    private void undoneNonLatestRecur(ReadOnlyTask taskToUncomplete) {
+        undoneNonParentRecur(taskToUncomplete);
+    }
+
+    private void undoneNonParentRecur(ReadOnlyTask taskToUncomplete) {
+        ReadOnlyTask recurRemovedTask = toDoList.removeRecur(taskToUncomplete);
+        toDoList.undoneTask(recurRemovedTask);
+    }
+
+```
+###### /java/seedu/onetwodo/model/ModelManager.java
+``` java
+    @Override
+    public void updateByNameDescriptionTag(Set<String> keywords) {
+        updateFilteredTaskList(new PredicateExpression(new MainKeywordsQualifier(keywords)));
+        searchStrings = keywords;
+    }
+
+```
+###### /java/seedu/onetwodo/model/ModelManager.java
+``` java
+    /**
      * A qualifier that look for a task's main keywords.
      * The main keywords that define a task is by its name, description and tags.
      *
@@ -648,7 +800,7 @@ public class SaveToCommandParser extends FileTransferCommandParser {
 
         @Override
         public String toString() {
-            return "name=" + String.join(", ", keyWords);
+            return "name =" + String.join(", ", keyWords);
         }
     }
 ```
@@ -664,10 +816,21 @@ public class SaveToCommandParser extends FileTransferCommandParser {
         }
         return sb.toString().trim();
     }
+
+    public void shrinkTagList (Tag tag) {
+    }
 }
 ```
 ###### /java/seedu/onetwodo/model/task/Date.java
 ``` java
+package seedu.onetwodo.model.task;
+
+import java.time.LocalDateTime;
+import java.util.NoSuchElementException;
+import java.util.Optional;
+
+import seedu.onetwodo.commons.exceptions.IllegalValueException;
+
 /**
  * Represents a Task's date in the toDo list. Guarantees: immutable.
  */
@@ -750,6 +913,14 @@ public class Date {
 ```
 ###### /java/seedu/onetwodo/model/task/EndDate.java
 ``` java
+package seedu.onetwodo.model.task;
+
+import java.time.LocalDateTime;
+import java.util.Optional;
+
+import seedu.onetwodo.commons.exceptions.IllegalValueException;
+import seedu.onetwodo.logic.parser.DateTimeParser;
+
 /**
  * Represents a Task's end date in the toDo list.
  */
@@ -784,11 +955,10 @@ public class EndDate extends Date {
         if (!localDateTime.isPresent()) {
             return "";
         } else {
-            return "End: " + localDateTime.get().toLocalDate().toString()
-                    + " " + localDateTime.get().toLocalTime().toString();
+            return localDateTime.get().toLocalDate().toString() + " "
+                    + localDateTime.get().toLocalTime().toString();
         }
     }
-
 }
 ```
 ###### /java/seedu/onetwodo/model/task/ReadOnlyTask.java
@@ -800,18 +970,32 @@ public class EndDate extends Date {
 ```
 ###### /java/seedu/onetwodo/model/task/Recurring.java
 ``` java
-/**
+package seedu.onetwodo.model.task;
+
+import seedu.onetwodo.commons.exceptions.IllegalValueException;
+
+enum RecurPeriod {
+    DAILY,
+    WEEKLY,
+    MONTHLY,
+    YEARLY
+}
+
+ /**
  * Represents if a task is recurring in the toDo list.
- * Guarantees: immutable; is valid as declared in {@link #isValidRecurring(String)}
  */
 public class Recurring {
-    public static final String RECURRING_CONSTRAINTS = "Task can only recur daily, weekly and monthly";
+
+    public static final String RECURRING_CONSTRAINTS = "Task can only recur daily, weekly, monthly and yearly";
     public static final String RECUR_DAILY = "daily";
     public static final String RECUR_WEEKLY = "weekly";
     public static final String RECUR_MONTHLY = "monthly";
     public static final String RECUR_YEARLY = "yearly";
+    public static final String RECUR_EMPTY = "";
 
     public String value;
+
+    private RecurPeriod period;
 
     /**
      * Validates given recurring value.
@@ -821,26 +1005,54 @@ public class Recurring {
     public Recurring(String recur) throws IllegalValueException {
         assert recur != null;
         String lowerCaseRecur = recur.toLowerCase().trim();
-        if (!isValidRecurring(lowerCaseRecur)) {
-            throw new IllegalValueException(RECURRING_CONSTRAINTS);
-        } else {
-            value = lowerCaseRecur;
-        }
+        setupRecurPeriod(lowerCaseRecur);
     }
 
     /**
      * Checks if user input a valid recurring period.
+     * Setup period value.
      */
-    public static boolean isValidRecurring(String userInput) {
-        return userInput.isEmpty() ||
-               userInput.equals(RECUR_DAILY) ||
-               userInput.equals(RECUR_WEEKLY) ||
-               userInput.equals(RECUR_MONTHLY) ||
-               userInput.equals(RECUR_YEARLY);
+    public void setupRecurPeriod(String userInput) throws IllegalValueException {
+        switch (userInput) {
+        case RECUR_DAILY:
+            this.period = RecurPeriod.DAILY;
+            break;
+        case RECUR_WEEKLY:
+            this.period = RecurPeriod.WEEKLY;
+            break;
+        case RECUR_MONTHLY:
+            this.period = RecurPeriod.MONTHLY;
+            break;
+        case RECUR_YEARLY:
+            this.period = RecurPeriod.YEARLY;
+            break;
+        case RECUR_EMPTY:
+            this.period = null;
+            break;
+        default:
+            throw new IllegalValueException(RECURRING_CONSTRAINTS);
+        }
+        if (this.period == null) {
+            this.value = "";
+        } else {
+            this.value = this.getRecur().toString().toLowerCase().trim();
+        }
+    }
+
+    public RecurPeriod getRecur() {
+        return this.period;
     }
 
     public boolean hasRecur() {
-        return !value.trim().isEmpty();
+        return this.getRecur() != null;
+    }
+
+
+    @Override
+    public boolean equals(Object other) {
+        return other == this // short circuit if same object
+                || (other instanceof Recurring // instanceof handles nulls
+                        && this.toString().equals(((Recurring) other).toString())); // state check
     }
 
     @Override
@@ -849,22 +1061,22 @@ public class Recurring {
     }
 
     @Override
-    public boolean equals(Object other) {
-        return other == this // short circuit if same object
-                || (other instanceof Recurring // instanceof handles nulls
-                        && this.value.equals(((Recurring) other).value)); // state
-                                                                         // check
-    }
-
-    @Override
     public int hashCode() {
-        return value.hashCode();
+        return this.toString().hashCode();
     }
 
 }
 ```
 ###### /java/seedu/onetwodo/model/task/StartDate.java
 ``` java
+package seedu.onetwodo.model.task;
+
+import java.time.LocalDateTime;
+import java.util.Optional;
+
+import seedu.onetwodo.commons.exceptions.IllegalValueException;
+import seedu.onetwodo.logic.parser.DateTimeParser;
+
 /**
  * Represents a Task's start date in the toDo list.
  */
@@ -878,7 +1090,7 @@ public class StartDate extends Date {
     public StartDate(String dateString) throws IllegalValueException {
         super(dateString);
         assert dateString != null;
-        LocalDateTime newDefaultDateTime = defaultDateTime.withSecond(0).withNano(0);
+        LocalDateTime newDefaultDateTime = defaultDateTime.withSecond(0).withNano(0).plusHours(1);
         String trimmedInput = dateString.trim();
         this.localDateTime = DateTimeParser.parseDateTime(trimmedInput, newDefaultDateTime);
         this.value = createDisplayValue(localDateTime);
@@ -898,8 +1110,8 @@ public class StartDate extends Date {
         if (!localDateTime.isPresent()) {
             return "";
         } else {
-            return "Start: " + localDateTime.get().toLocalDate().toString()
-                    + " " + localDateTime.get().toLocalTime().toString();
+            return localDateTime.get().toLocalDate().toString() + " "
+                    + localDateTime.get().toLocalTime().toString();
         }
     }
 
@@ -915,45 +1127,38 @@ public class StartDate extends Date {
 ```
 ###### /java/seedu/onetwodo/model/task/Task.java
 ``` java
-    public void setRecur(Recurring recur) {
-        assert recur != null;
-        this.recur = recur;
-    }
-
-```
-###### /java/seedu/onetwodo/model/task/Task.java
-``` java
-    public void forwardTaskRecurDate() {
+    public void updateTaskRecurDate(boolean isForward) {
         assert this.getTaskType() != TaskType.TODO;
+        int valueToAdd = isForward ? 1 : -1;
         StartDate tempStartDate;
         EndDate tempEndDate = getEndDate();
-        switch(this.getRecur().value) {
-        case Recurring.RECUR_DAILY:
-            this.setEndDate(new EndDate(tempEndDate.localDateTime.get().plusDays(1)));
+        switch (this.recur.getRecur()) {
+        case DAILY:
+            this.setEndDate(new EndDate(tempEndDate.localDateTime.get().plusDays(valueToAdd)));
             if (this.hasStartDate()) {
                 tempStartDate = getStartDate();
-                this.setStartDate(new StartDate(tempStartDate.localDateTime.get().plusDays(1)));
+                this.setStartDate(new StartDate(tempStartDate.localDateTime.get().plusDays(valueToAdd)));
             }
             break;
-        case Recurring.RECUR_WEEKLY:
-            this.setEndDate(new EndDate(tempEndDate.localDateTime.get().plusWeeks(1)));
+        case WEEKLY:
+            this.setEndDate(new EndDate(tempEndDate.localDateTime.get().plusWeeks(valueToAdd)));
             if (this.hasStartDate()) {
                 tempStartDate = getStartDate();
-                this.setStartDate(new StartDate(tempStartDate.localDateTime.get().plusWeeks(1)));
+                this.setStartDate(new StartDate(tempStartDate.localDateTime.get().plusWeeks(valueToAdd)));
             }
             break;
-        case Recurring.RECUR_MONTHLY:
-            this.setEndDate(new EndDate(tempEndDate.localDateTime.get().plusMonths(1)));
+        case MONTHLY:
+            this.setEndDate(new EndDate(tempEndDate.localDateTime.get().plusMonths(valueToAdd)));
             if (this.hasStartDate()) {
                 tempStartDate = getStartDate();
-                this.setStartDate(new StartDate(tempStartDate.localDateTime.get().plusMonths(1)));
+                this.setStartDate(new StartDate(tempStartDate.localDateTime.get().plusMonths(valueToAdd)));
             }
             break;
-        case Recurring.RECUR_YEARLY:
-            this.setEndDate(new EndDate(tempEndDate.localDateTime.get().plusYears(1)));
+        case YEARLY:
+            this.setEndDate(new EndDate(tempEndDate.localDateTime.get().plusYears(valueToAdd)));
             if (this.hasStartDate()) {
                 tempStartDate = getStartDate();
-                this.setStartDate(new StartDate(tempStartDate.localDateTime.get().plusYears(1)));
+                this.setStartDate(new StartDate(tempStartDate.localDateTime.get().plusYears(valueToAdd)));
             }
             break;
         default:
@@ -964,13 +1169,28 @@ public class StartDate extends Date {
 ```
 ###### /java/seedu/onetwodo/model/task/TaskAttributesChecker.java
 ``` java
-    private static void checkIsValidRecur(Task taskUnderTest) throws IllegalValueException {
+    public static void checkIsValidRecur(Task taskUnderTest) throws IllegalValueException {
         if (!taskUnderTest.getStartDate().hasDate() && !taskUnderTest.getEndDate().hasDate()) {
             if (taskUnderTest.hasRecur()) {
-                throw new IllegalValueException(String.format(MESSAGE_INVALID_COMMAND_FORMAT,
-                        MESSAGE_INVALID_RECUR) + AddCommand.MESSAGE_USAGE);
+                throw new IllegalValueException(String.format(MESSAGE_INVALID_COMMAND_FORMAT, MESSAGE_INVALID_RECUR)
+                        + AddCommand.MESSAGE_USAGE);
             }
         }
     }
 }
+```
+###### /java/seedu/onetwodo/model/ToDoList.java
+``` java
+    public Task removeRecur(ReadOnlyTask task) {
+        return tasks.removeRecur(task);
+    }
+
+    public boolean contains(ReadOnlyTask task) {
+        return tasks.contains(task);
+    }
+
+    public void backwardRecur(ReadOnlyTask task) {
+        tasks.updateRecur(task, false);
+    }
+
 ```
