--- a/collated/main/A0143029M.md
+++ b/collated/main/A0143029M.md
@@ -18,6 +18,7 @@ public class CloseDialogEvent extends BaseEvent {
 public class EditCommand extends Command {
 
     public static final String COMMAND_WORD = "edit";
+    public static final String SHORT_COMMAND_WORD = "e";
 
     public static final String MESSAGE_USAGE = COMMAND_WORD + ": Edits the details of the task identified "
             + "by the index used in the last task listing. "
@@ -26,7 +27,7 @@ public class EditCommand extends Command {
             + "[s/START_DATE] [e/END_DATE] [r/RECUR] [p/PRIORITY] [d/DESCRIPTION ] [t/TAG]...\n"
             + "Example: " + COMMAND_WORD + " e1 s/tmr 9:00am d/beware of dogs";
 
-    public static final String MESSAGE_EDIT_TASK_SUCCESS = "Edited Task Result: %1$s";
+    public static final String MESSAGE_EDIT_TASK_SUCCESS = "Edited %1$s";
     public static final String MESSAGE_NOT_EDITED = "At least one field to edit must be provided.";
     public static final String MESSAGE_DUPLICATE_TASK = "This task already exists in the todo list.";
     public static final String MESSAGE_TYPE_ERROR = "Task is invalid.";
@@ -66,8 +67,7 @@ public class EditCommand extends Command {
         TaskAttributesChecker.validateEditedAttributes(editedTask);
         try {
             model.updateTask(taskToEdit, internalIdx, editedTask);
-            jumpToNewTask(editedTask);
-            EventsCenter.getInstance().post(new DeselectCardsEvent());
+            model.jumpToNewTask(editedTask);
         } catch (UniqueTaskList.DuplicateTaskException dpe) {
             reverseAdd(taskToEdit, internalIdx);
             throw new CommandException(MESSAGE_DUPLICATE_TASK);
@@ -216,11 +216,15 @@ public class ListCommand extends Command {
 
     private static final String DATES_ARE_INVALID = "Dates are invalid";
     public static final String COMMAND_WORD = "list";
+    public static final String COMMAND_LIST_DONE = COMMAND_WORD + " done";
+    public static final String COMMAND_LIST_UNDONE = COMMAND_WORD + " undone";
+    public static final String COMMAND_LIST_ALL = COMMAND_WORD + " all";
+    public static final String SHORT_COMMAND_WORD = "ls";
     public static final String MESSAGE_LIST_DONE_SUCCESS = "Listed completed tasks";
-    public static final String MESSAGE_LIST_UNDONE_SUCCESS = "Listed incompleted tasks";
+    public static final String MESSAGE_LIST_UNDONE_SUCCESS = "Listed uncompleted tasks";
     public static final String MESSAGE_LIST_ALL_SUCCESS = "Listed all tasks";
     public static final String MESSAGE_USAGE = COMMAND_WORD + ": List tasks by done status"
-            + "Parameters: [DONE_STATUS] [DATE] [p/PRIORITY] [t/TAG]...\n";
+            + "\nParameters: [DONE_STATUS] [DATE] [p/PRIORITY] [t/TAG]...\n";
 
     private DoneStatus doneStatus;
     private EndDate before;
@@ -228,9 +232,43 @@ public class ListCommand extends Command {
     private Priority priority;
     private Set<Tag> tagSet;
     private SortOrder sortOrder;
+    private boolean isReversed = false;
 
     public ListCommand(String doneString, String beforeDate, String afterDate,
-            String priorityString, Set<String> tags, String order) throws IllegalValueException {
+            String priorityString, Set<String> tags, String order, boolean isReversed) throws IllegalValueException {
+        setDone(doneString);
+        setSortOder(order, isReversed);
+        setDates(beforeDate, afterDate);
+        setPriority(priorityString);
+        setTags(tags);
+    }
+
+    private void setTags(Set<String> tags) throws IllegalValueException {
+        final Set<Tag> tagSet = new HashSet<>();
+        for (String tagName : tags) {
+            tagSet.add(new Tag(tagName));
+        }
+        this.tagSet = tagSet;
+    }
+
+    private void setPriority(String priorityString) throws IllegalValueException {
+        priority = new Priority(priorityString);
+    }
+
+    private void setDates(String beforeDate, String afterDate) throws IllegalValueException {
+        before = new EndDate(beforeDate);
+        after = new StartDate(afterDate);
+        if (before.hasDate() && after.hasDate() && before.getLocalDateTime().isBefore(after.getLocalDateTime())) {
+            throw new IllegalValueException(DATES_ARE_INVALID);
+        }
+    }
+
+    private void setSortOder(String order, boolean isReversed) throws IllegalValueException {
+        sortOrder = SortOrder.getSortOrder(order);
+        this.isReversed = isReversed;
+    }
+
+    private void setDone(String doneString) {
         assert doneString != null;
         switch (doneString) {
         case DoneStatus.DONE_STRING: // view done tasks
@@ -243,18 +281,6 @@ public class ListCommand extends Command {
             doneStatus = DoneStatus.ALL;
             break;
         }
-        sortOrder = SortOrder.getSortOrder(order);
-        before = new EndDate(beforeDate);
-        after = new StartDate(afterDate);
-        if (before.hasDate() && after.hasDate() && before.getLocalDateTime().isBefore(after.getLocalDateTime())) {
-            throw new IllegalValueException(DATES_ARE_INVALID);
-        }
-        priority = new Priority(priorityString);
-        final Set<Tag> tagSet = new HashSet<>();
-        for (String tagName : tags) {
-            tagSet.add(new Tag(tagName));
-        }
-        this.tagSet = tagSet;
     }
 
     @Override
@@ -275,7 +301,7 @@ public class ListCommand extends Command {
             feecbackMessageToReturn = MESSAGE_LIST_UNDONE_SUCCESS;
         }
         if (sortOrder != SortOrder.NONE) {
-            model.sortBy(sortOrder);
+            model.sortBy(sortOrder, isReversed);
         }
         model.resetSearchStrings();
         model.updateByDoneDatePriorityTags(before, after, priority, tagSet);
@@ -325,29 +351,35 @@ public class ListCommandParser {
      */
     public Command parse(String args) {
         ArgumentTokenizer argsTokenizer = new ArgumentTokenizer(
-                PREFIX_BEFORE, PREFIX_AFTER, PREFIX_PRIORITY, PREFIX_TAG, PREFIX_ORDER);
+                PREFIX_BEFORE, PREFIX_AFTER, PREFIX_PRIORITY, PREFIX_TAG, PREFIX_ORDER, PREFIX_REVERSE);
         argsTokenizer.tokenize(args);
         Optional<String> preamble = argsTokenizer.getPreamble();
         String beforeDate = argsTokenizer.getValue(PREFIX_BEFORE).orElse("");
         String afterDate = argsTokenizer.getValue(PREFIX_AFTER).orElse("");
         String priority = argsTokenizer.getValue(PREFIX_PRIORITY).orElse("");
         String order = argsTokenizer.getValue(PREFIX_ORDER).orElse("");
+        boolean isReversed = argsTokenizer.getValue(PREFIX_REVERSE).isPresent();
         Set<String> tags = ParserUtil.toSet(argsTokenizer.getAllValues(PREFIX_TAG));
 
         try {
             if (!preamble.isPresent()) {
-                return new ListCommand(DoneStatus.UNDONE_STRING, beforeDate, afterDate, priority, tags, order);
+                return new ListCommand(DoneStatus.UNDONE_STRING, beforeDate, afterDate,
+                        priority, tags, order, isReversed);
             }
             switch (preamble.get().toLowerCase()) {
             case DoneStatus.DONE_STRING:
-                return new ListCommand(DoneStatus.DONE_STRING, beforeDate, afterDate, priority, tags, order);
+                return new ListCommand(DoneStatus.DONE_STRING, beforeDate, afterDate,
+                        priority, tags, order, isReversed);
             case DoneStatus.ALL_STRING:
-                return new ListCommand(DoneStatus.ALL_STRING, beforeDate, afterDate, priority, tags, order);
+                return new ListCommand(DoneStatus.ALL_STRING, beforeDate, afterDate,
+                        priority, tags, order, isReversed);
             case DoneStatus.UNDONE_STRING:
             case "":
-                return new ListCommand(DoneStatus.UNDONE_STRING, beforeDate, afterDate, priority, tags, order);
+                return new ListCommand(DoneStatus.UNDONE_STRING, beforeDate, afterDate,
+                        priority, tags, order, isReversed);
             case TODAY:
-                return new ListCommand(DoneStatus.UNDONE_STRING, TOMORROW, TODAY_START, priority, tags, order);
+                return new ListCommand(DoneStatus.UNDONE_STRING, TOMORROW, TODAY_START,
+                        priority, tags, order, isReversed);
             default:
                 return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, ListCommand.MESSAGE_USAGE));
             }
@@ -357,30 +389,494 @@ public class ListCommandParser {
     }
 }
 ```
-###### /java/seedu/onetwodo/model/DoneStatus.java
+###### /java/seedu/onetwodo/model/ModelManager.java
 ``` java
-public enum DoneStatus {
-    DONE("done"),
-    UNDONE("undone"),
-    ALL("all");
-
-    private final String status;
-    public static final String DONE_STRING = "done";
-    public static final String UNDONE_STRING = "undone";
-    public static final String ALL_STRING = "all";
-
-    DoneStatus (String status) {
-        this.status = status;
+    @Override
+    /**
+     * Filters task list according to the dates, priority and tags given.
+     */
+    public void updateByDoneDatePriorityTags(EndDate before, StartDate after, Priority priority, Set<Tag> tags) {
+        boolean hasBefore = before.hasDate();
+        boolean hasAfter = after.hasDate();
+        PredicateExpression predicate = new PredicateExpression(task -> isTaskSameDoneStatus(task, doneStatus)
+                && (hasBefore ? isTaskBefore(task, before) : true)
+                && (hasAfter ? isTaskAfter(task, after) : true)
+                && (priority.hasPriority() ? isPrioritySame(task, priority) : true)
+                && (!tags.isEmpty() ? containsAnyTag(task, tags) : true));
+        updateFilteredTaskList(predicate);
     }
 
-    public String getStatus() {
-        return status;
+    private boolean containsAnyTag(ReadOnlyTask task, Set<Tag> tags) {
+        Set<Tag> tagsRemoved = task.getTags().toSet();
+        tagsRemoved.removeAll(tags);
+        return tagsRemoved.size() != task.getTags().toSet().size();
+    }
+
+```
+###### /java/seedu/onetwodo/model/ModelManager.java
+``` java
+    private boolean isTaskSameDoneStatus(ReadOnlyTask task, DoneStatus doneStatus) {
+        switch (doneStatus) {
+        case DONE:
+            return task.getDoneStatus() == true;
+        case UNDONE:
+            return task.getDoneStatus() == false;
+        case ALL:
+        default:
+            return true;
+        }
+    }
+
+    private boolean isTaskBefore(ReadOnlyTask task, EndDate endDate) {
+        switch (task.getTaskType()) {
+        case DEADLINE:
+            return task.getEndDate().getLocalDateTime().isBefore(endDate.getLocalDateTime());
+        case EVENT:
+            return task.getStartDate().getLocalDateTime().isBefore(endDate.getLocalDateTime());
+        case TODO:
+        default:
+            return true;
+        }
+    }
+
+    private boolean isTaskAfter(ReadOnlyTask task, StartDate startDate) {
+        switch (task.getTaskType()) {
+        case DEADLINE:
+        case EVENT:
+            return task.getEndDate().getLocalDateTime().isAfter(startDate.getLocalDateTime());
+        case TODO:
+        default:
+            return true;
+        }
     }
 
     @Override
-    public String toString() {
-        return status;
+    public void updateByDoneStatus() {
+        switch (doneStatus) {
+        case DONE:
+            updateFilteredDoneTaskList();
+            break;
+        case UNDONE:
+            updateFilteredUndoneTaskList();
+            break;
+        case ALL:
+            updateFilteredListToShowAll();
+            break;
+        }
+    };
+
+    @Override
+    public void updateBySearchStrings() {
+        if (searchStrings.size() > 0) {
+            updateByNameDescriptionTag(searchStrings);
+        }
     }
+
+    @Override
+    public FilteredList<ReadOnlyTask> getFilteredByDoneFindType(TaskType type) {
+        updateBySearchStrings();
+
+        FilteredList<ReadOnlyTask> filtered = getFilteredTaskList().filtered(t -> t.getTaskType() == type);
+
+        switch (doneStatus) {
+        case DONE:
+            return filtered.filtered(t -> t.getDoneStatus() == true);
+        case UNDONE:
+            return filtered.filtered(t -> t.getDoneStatus() == false);
+        case ALL:
+        default:
+            return filtered;
+        }
+    }
+
+    @Override
+    public int getTaskIndex(ReadOnlyTask task) {
+        FilteredList<ReadOnlyTask> filtered = getFilteredByDoneFindType(task.getTaskType());
+        return filtered.indexOf(task);
+    }
+
+    /**
+     * Scroll to task provided.
+     * @param task to jump to
+     */
+    @Override
+    public void jumpToNewTask(ReadOnlyTask task) {
+        int filteredIndex = getTaskIndex(task);
+        TimerTask postJumpToEvent = new TimerTask() {
+            @Override
+            public void run() {
+                EventsCenter.getInstance().post(new JumpToListRequestEvent(filteredIndex, task.getTaskType()));
+            }
+        };
+        new Timer().schedule(postJumpToEvent, AUTOSCROLL_LAG);
+    }
+
+```
+###### /java/seedu/onetwodo/model/task/UniqueTaskList.java
+``` java
+    /**
+     * Sorts the internalList according to the given sort order.
+     */
+    public void sortTasks(SortOrder sortOrder, boolean isReversed) {
+        switch (sortOrder) {
+        case ALPHANUMERIC:
+            if (!isReversed) {
+                FXCollections.sort(internalList, (Task t1, Task t2) -> t1.getName().compareTo(t2.getName()));
+            } else {
+                FXCollections.sort(internalList, (Task t1, Task t2) -> t2.getName().compareTo(t1.getName()));
+            }
+            break;
+        case PRIORITY:
+            if (!isReversed) {
+                FXCollections.sort(internalList, (Task t1, Task t2) -> t1.getPriority().compareTo(t2.getPriority()));
+            } else {
+                FXCollections.sort(internalList, (Task t1, Task t2) -> t2.getPriority().compareTo(t1.getPriority()));
+            }
+            break;
+        case DATETIME:
+            if (!isReversed) {
+                FXCollections.sort(internalList, (Task t1, Task t2) -> t1.compareTo(t2));
+            } else {
+                FXCollections.sort(internalList, (Task t1, Task t2) -> t2.compareTo(t1));
+            }
+            break;
+        default:
+        }
+    }
+
+    public void setTasks(UniqueTaskList replacement) {
+        this.internalList.setAll(replacement.internalList);
+    }
+
+    public void setTasks(List<? extends ReadOnlyTask> tasks) throws DuplicateTaskException {
+        final UniqueTaskList replacement = new UniqueTaskList();
+        for (final ReadOnlyTask task : tasks) {
+            replacement.add(new Task(task));
+        }
+        setTasks(replacement);
+    }
+
+    public UnmodifiableObservableList<Task> asObservableList() {
+        return new UnmodifiableObservableList<>(internalList);
+    }
+
+    @Override
+    public Iterator<Task> iterator() {
+        return internalList.iterator();
+    }
+
+    public boolean isEmpty() {
+        return internalList.isEmpty();
+    }
+
+    @Override
+    public boolean equals(Object other) {
+        return other == this // short circuit if same object
+                || (other instanceof UniqueTaskList // instanceof handles nulls
+                        && this.internalList.equals(((UniqueTaskList) other).internalList));
+    }
+
+    @Override
+    public int hashCode() {
+        return internalList.hashCode();
+    }
+
+    /**
+     * Signals that an operation would have violated the 'no duplicates'
+     * property of the list.
+     */
+    public static class DuplicateTaskException extends DuplicateDataException {
+        protected DuplicateTaskException() {
+            super("Operation would result in duplicate tasks");
+        }
+    }
+
+    /**
+     * Signals that an operation targeting a specified task in the list would
+     * fail because there is no such matching task in the list.
+     */
+    public static class TaskNotFoundException extends Exception {
+    }
+
+}
+```
+###### /java/seedu/onetwodo/ui/CommandBox.java
+``` java
+    public void handleCommands(String command) {
+        try {
+            CommandResult commandResult = logic.execute(command);
+            setKeyListenerForMutators(command);
+            setErrorStyleForCommandResult(false);
+            commandTextField.setText("");
+            logger.info("Result: " + commandResult.feedbackToUser);
+            raise(new NewResultAvailableEvent(commandResult.feedbackToUser));
+        } catch (CommandException e) {
+            setErrorStyleForCommandResult(true);
+            logger.info("Invalid command: " + commandTextField.getText());
+            raise(new NewResultAvailableEvent(e.getMessage()));
+        }
+    }
+
+    /**
+     * Sets the command box error pseudo-style based on command result.
+     */
+    private void setErrorStyleForCommandResult(boolean isError) {
+        commandTextField.pseudoClassStateChanged(ERROR_PSEUDOCLASS, isError);
+    }
+
+    public void focus() {
+        commandTextField.requestFocus();
+    }
+
+    public void undoTextField() {
+        commandTextField.undo();
+    }
+
+    public void setKeyListener(EventHandler<KeyEvent> ke) {
+        commandTextField.setOnKeyPressed(ke);
+    }
+
+    public void setKeyListenerReleased(EventHandler<KeyEvent> ke) {
+        commandTextField.setOnKeyReleased(ke);
+    }
+
+    private void setKeyListenerForMutators(String command) {
+        switch (command) {
+        case AddCommand.COMMAND_WORD:
+        case EditCommand.COMMAND_WORD:
+            commandTextField.setOnKeyPressed((KeyEvent ke) -> {
+                raise(new DeselectCardsEvent());
+                resetKeyListener();
+            });
+            break;
+        default:
+            break;
+        }
+    }
+
+    public void resetKeyListener() {
+        commandTextField.setOnKeyPressed(null);
+        commandTextField.setOnKeyPressed(new EventHandler<KeyEvent>() {
+            @Override
+            public void handle(KeyEvent ke) {
+                setErrorStyleForCommandResult(false);
+                resetIfUpDownKey(ke);
+            }
+        });
+        commandTextField.setOnKeyReleased(null);
+        commandTextField.setOnKeyReleased(scrollHandler);
+    }
+
+    private void resetIfUpDownKey(KeyEvent ke) {
+        if (ke.isShiftDown()) {
+            return;
+        }
+        KeyCode keyCode = ke.getCode();
+        switch (keyCode) {
+        case UP:
+            undoTextArea();
+            break;
+        case DOWN:
+            redoTextArea();
+            break;
+        default: break;
+        }
+    }
+
+    private void undoTextArea() {
+        if (previousCommands.isEmpty()) {
+            return;
+        }
+        String previousCommand = previousCommands.pop();
+        refilledCommands.push(previousCommand);
+        if (refilledCommands.isEmpty()) {
+            commandTextField.setText("");
+        } else {
+            commandTextField.setText(refilledCommands.peek());
+        }
+    }
+
+    private void redoTextArea() {
+        if (refilledCommands.isEmpty()) {
+            return;
+        }
+        String previousRefilledCommand = refilledCommands.pop();
+        previousCommands.push(previousRefilledCommand);
+        if (refilledCommands.isEmpty()) {
+            commandTextField.setText("");
+        } else {
+            commandTextField.setText(refilledCommands.peek());
+        }
+    }
+
+    public void setScrollKeyListener(EventHandler<KeyEvent> scrollHandler) {
+        this.scrollHandler = scrollHandler;
+        commandTextField.setOnKeyReleased(scrollHandler);
+    }
+
+}
+```
+###### /java/seedu/onetwodo/ui/MainWindow.java
+``` java
+    public TaskListPanel getDeadlineTaskListPanel() {
+        return this.deadlineTaskListPanel;
+    }
+
+    public TaskListPanel getEventTaskListPanel() {
+        return this.eventTaskListPanel;
+    }
+
+    public TaskListPanel getTodoTaskListPanel() {
+        return this.todoTaskListPanel;
+    }
+
+    public TaskListPanel getTaskListPanel(TaskType type) {
+        switch (type) {
+        case DEADLINE:
+            return getDeadlineTaskListPanel();
+        case EVENT:
+            return getEventTaskListPanel();
+        case TODO:
+        default:
+            return getTodoTaskListPanel();
+        }
+    }
+
+    public void openDialog(ReadOnlyTask task) {
+        JFXDialogLayout content = new JFXDialogLayout();
+        Text nameText = new Text(task.getName().fullName);
+        Text descriptionText = new Text(task.getDescription().value);
+        nameText.setWrappingWidth(MIN_WIDTH);
+        descriptionText.setWrappingWidth(MIN_WIDTH);
+        content.setHeading(nameText);
+        content.setBody(descriptionText);
+        closeDialog();
+        dialog = new JFXDialog(dialogStackPane, content, JFXDialog.DialogTransition.CENTER, true);
+        dialog.show();
+        closeDialogOnNextKeyPress();
+    }
+
+    void closeDialog() {
+        if (dialog == null) {
+            return;
+        }
+        dialog.close();
+        dialog = null;
+        commandBox.focus();
+    }
+
+    private void closeDialogOnNextKeyPress() {
+        commandBox.setKeyListener((KeyEvent ke) -> {
+            KeyCode code = ke.getCode();
+            if (code == KeyCode.UP || code == KeyCode.DOWN) {
+                return;
+            }
+            ke.consume();
+            closeDialog();
+            commandBox.resetKeyListener();
+            commandBox.focus();
+        });
+    }
+
+    /**
+     * Handle scrolling KeyEvents for browser WebView and TaskListPanels
+     */
+    private void setScrollOnUpDown() {
+        commandBox.setScrollKeyListener((KeyEvent ke) -> {
+            KeyCode code = ke.getCode();
+            if (!(code == KeyCode.UP || code == KeyCode.DOWN)) {
+                return;
+            }
+            if (dialog == null && ke.isShiftDown()) {
+                int maxDeadlineIndex = deadlineTaskListPanel.getNumberOfItems() - 1;
+                int maxEventIndex = eventTaskListPanel.getNumberOfItems() - 1;
+                int maxTodoIndex = todoTaskListPanel.getNumberOfItems() - 1;
+                deadlineScrollIndex = getScrollIndex(ke.getCode(), maxDeadlineIndex, deadlineScrollIndex, SCROLL_AMT);
+                eventScrollIndex = getScrollIndex(ke.getCode(), maxEventIndex, eventScrollIndex, SCROLL_AMT);
+                todoScrollIndex = getScrollIndex(ke.getCode(), maxTodoIndex, todoScrollIndex, SCROLL_AMT);
+                deadlineTaskListPanel.viewScrollTo(deadlineScrollIndex);
+                eventTaskListPanel.viewScrollTo(eventScrollIndex);
+                todoTaskListPanel.viewScrollTo(todoScrollIndex);
+            } else {
+                scrollBrowser(ke);
+            }
+        });
+    }
+
+    private void scrollBrowser(KeyEvent ke) {
+        if (browser == null) {
+            return;
+        }
+        switch (ke.getCode()) {
+        case UP:
+            browser.fireEvent(new KeyEvent(KeyEvent.KEY_PRESSED, "", "",
+                    KeyCode.UP, true, true, true, true));
+            break;
+        case DOWN:
+            browser.fireEvent(new KeyEvent(KeyEvent.KEY_PRESSED, "", "",
+                    KeyCode.DOWN, true, true, true, true));
+            break;
+        default:
+            break;
+        }
+        browser.fireEvent(new KeyEvent(KeyEvent.KEY_PRESSED, "", "",
+                KeyCode.ESCAPE, true, true, true, true));
+        browser.requestFocus();
+    }
+
+    private int getScrollIndex(KeyCode code, int maxIndex, int originalIndex, int scrollAmount) {
+        int index = originalIndex;
+        if (code == KeyCode.UP) {
+            index -= scrollAmount;
+        } else if (code == KeyCode.DOWN) {
+            index += scrollAmount;
+        }
+        index = index < 0 ? 0 : index > maxIndex ? maxIndex : index;
+        return index;
+    }
+
+    /**
+     * Displays HTML file in JFXDialogLayout
+     */
+    private void showHTML(String urlString) {
+        JFXDialogLayout content = new JFXDialogLayout();
+        browser = new WebView();
+        URL help = MainApp.class.getResource(urlString);
+        browser.getEngine().load(help.toString());
+        hideScrollBar(browser);
+        FxViewUtil.applyAnchorBoundaryParameters(browser, 0.0, 0.0, 0.0, 0.0);
+        content.setBody(browser);
+        closeDialog();
+        if (urlString.equals(HELPWINDOW_URL)) {
+            EventsCenter.getInstance().post(new NewResultAvailableEvent(HelpCommand.SHOWING_HELP_MESSAGE));
+        } else if (urlString.equals(USERGUIDE_URL)) {
+            EventsCenter.getInstance().post(new NewResultAvailableEvent(HelpCommand.SHOWING_HELP_MESSAGE_USERGUIDE));
+        }
+        dialog = new JFXDialog(dialogStackPane, content, JFXDialog.DialogTransition.CENTER, true);
+        dialog.show();
+        setBrowserCloseListener();
+    }
+
+    private void setBrowserCloseListener() {
+        closeDialogOnNextKeyPress();
+        browser.setOnKeyReleased((KeyEvent ke) -> {
+            KeyCode code = ke.getCode();
+            if (code == KeyCode.UP || code == KeyCode.DOWN) {
+                return;
+            }
+            ke.consume();
+            closeDialog();
+            commandBox.resetKeyListener();
+            commandBox.focus();
+        });
+    }
+
+    private void hideScrollBar(WebView browser) {
+        browser.getChildrenUnmodifiable().addListener((ListChangeListener<Node>) c -> browser
+                .lookupAll(".scroll-bar")
+                .forEach((node) -> node.setVisible(false)));
+    }
+
 }
 ```
 ###### /java/seedu/onetwodo/ui/TaskCard.java
@@ -477,7 +973,7 @@ public enum DoneStatus {
     }
 
     @Subscribe
-    private void handleSelectTaskEvent(JumpToListRequestEvent event) {
+    private void handleSelectTaskEvent(SelectCardEvent event) {
         logger.info(LogsCenter.getEventHandlingLogMessage(event));
         String prefix = event.taskType.toString();
         String cardPrefixId = prefix + (event.targetIndex + 1);
@@ -534,6 +1030,10 @@ public class TaskListPanel extends UiPart<Region> {
         }
     }
 
+    public int getNumberOfItems() {
+        return taskListView.getItems().size();
+    }
+
     private void setConnections(ObservableList<ReadOnlyTask> taskList) {
         taskListView.setItems(getFilteredTasks(taskList));
         taskListView.setCellFactory(listView -> new TaskListViewCell());
@@ -551,22 +1051,36 @@ public class TaskListPanel extends UiPart<Region> {
     }
 
     private void setEventHandlerForSelectionChangeEvent() {
-        taskListView.setOnMouseClicked(new EventHandler<MouseEvent>() {
-            @Override
-            public void handle(MouseEvent click) {
-                ReadOnlyTask selectedValue = taskListView.getSelectionModel().getSelectedItem();
-                if (selectedValue != null) {
-                    logger.fine("Selection in task list panel changed to : '" + selectedValue + "'");
-                    raise(new TaskPanelSelectionChangedEvent(selectedValue));
-                }
+        taskListView.setOnMouseClicked((MouseEvent click) -> {
+            ReadOnlyTask selectedValue = taskListView.getSelectionModel().getSelectedItem();
+            if (selectedValue != null) {
+                logger.fine("Selection in task list panel changed to : '" + selectedValue + "'");
+                raise(new TaskPanelSelectionChangedEvent(selectedValue));
             }
         });
     }
 
-    public void scrollTo(int index) {
+    public void scrollToAndHighlight(int index) {
         Platform.runLater(() -> {
             taskListView.scrollTo(index);
             taskListView.getSelectionModel().clearAndSelect(index);
+        });
+        highlightTaskCard(index);
+    }
+
+    private void highlightTaskCard(int index) {
+        TimerTask highlightTask = new TimerTask() {
+            @Override
+            public void run() {
+                EventsCenter.getInstance().post(new SelectCardEvent(index, taskType));
+            }
+        };
+        new Timer().schedule(highlightTask, AUTOSCROLL_LAG);
+    }
+
+    public void viewScrollTo(int index) {
+        Platform.runLater(() -> {
+            taskListView.scrollTo(index);
         });
     }
 
@@ -594,13 +1108,13 @@ public class TaskListPanel extends UiPart<Region> {
         logger.info(LogsCenter.getEventHandlingLogMessage(event));
         switch (event.taskType) {
         case DEADLINE:
-            mainWindow.getDeadlineTaskListPanel().scrollTo(event.targetIndex);
+            mainWindow.getDeadlineTaskListPanel().scrollToAndHighlight(event.targetIndex);
             break;
         case EVENT:
-            mainWindow.getEventTaskListPanel().scrollTo(event.targetIndex);
+            mainWindow.getEventTaskListPanel().scrollToAndHighlight(event.targetIndex);
             break;
         case TODO:
-            mainWindow.getTodoTaskListPanel().scrollTo(event.targetIndex);
+            mainWindow.getTodoTaskListPanel().scrollToAndHighlight(event.targetIndex);
             break;
         }
     }
@@ -615,6 +1129,7 @@ public class TaskListPanel extends UiPart<Region> {
 ```
 ###### /resources/view/MainWindow.fxml
 ``` fxml
+
 <VBox minHeight="600.0" minWidth="800.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <MenuBar VBox.vgrow="NEVER">
@@ -640,6 +1155,7 @@ public class TaskListPanel extends UiPart<Region> {
             <Menu mnemonicParsing="false" text="Help">
                <items>
                   <MenuItem fx:id="helpMenuItem" mnemonicParsing="false" onAction="#handleHelp" text="Show Command Help" />
+                  <MenuItem fx:id="helpUGMenuItem" mnemonicParsing="false" onAction="#handleHelpUG" text="Show User Guide" />
                </items>
             </Menu>
          </menus>
@@ -818,7 +1334,7 @@ public class TaskListPanel extends UiPart<Region> {
 }
 
 .chip {
-    -fx-background-color: lightgrey;
+    -fx-background-color: darkgrey;
     -fx-background-radius: 40;
     -fx-text-fill: white;
     -fx-background-position: center center;
@@ -841,23 +1357,29 @@ public class TaskListPanel extends UiPart<Region> {
 	-fx-text-fill: white;
 }
 
+.label:overdue {
+	-fx-text-fill: maroon !important;
+}
+
+.label-priority {
+	-fx-font-weight: bold;
+	-fx-text-fill: darkgray;
+}
+
 .label-priority:HIGH {
 	-fx-background-color: #FF4C25 !important;
-	-fx-text-fill: white !important;
 	-fx-padding: 3px;
 	-fx-background-radius: 3px;
 }
 
 .label-priority:MEDIUM {
 	-fx-background-color: #FA8215 !important;
-	-fx-text-fill: white !important;
 	-fx-padding: 3px;
 	-fx-background-radius: 3px;
 }
 
 .label-priority:LOW {
 	-fx-background-color: #9DFA00 !important;
-	-fx-text-fill: white !important;
 	-fx-padding: 3px;
 	-fx-background-radius: 3px;
 }
