--- a/collated/test/A0139343E.md
+++ b/collated/test/A0139343E.md
@@ -1,4 +1,119 @@
 # A0139343E
+###### /java/guitests/DoneCommandTest.java
+``` java
+    @Test
+    public void done_deadlineDailyTask_success() {
+        assertDoneSuccess(TaskType.DEADLINE, "d4", currentList);
+    }
+
+    @Test
+    public void done_eventMonthlyTask_success() {
+        assertDoneSuccess(TaskType.EVENT, "e1", currentList);
+    }
+
+    @Test
+    public void done_eventYearlyTask_success() {
+        assertDoneSuccess(TaskType.EVENT, "e3", currentList);
+    }
+
+    @Test
+    public void undone_nonRecurringTask_success() throws TaskNotFoundException {
+        // try to undone an incompleted task
+        TestTask[] testTasks = currentList;
+        commandBox.runCommand(UndoneCommand.COMMAND_WORD + " t1");
+        assertResultMessage(UndoneCommand.MESSAGE_UNDONE_UNDONE_TASK);
+
+        // done the same task, and try to undone it
+        commandBox.runCommand(DoneCommand.COMMAND_WORD + " t1");
+        testTasks = doneRecurTestTask(testTasks, "t1", TaskType.EVENT);
+        assertUndoneSuccess(TaskType.TODO, "t1", testTasks);
+    }
+
+    @Test
+    public void undone_latestRecurringTask_success() throws TaskNotFoundException {
+        TestTask[] testTasks = currentList;
+        commandBox.runCommand(DoneCommand.COMMAND_WORD + " e1");
+        testTasks = doneRecurTestTask(testTasks, "e1", TaskType.EVENT);
+        assertUndoneSuccess(TaskType.EVENT, "e1", testTasks);
+    }
+
+
+```
+###### /java/guitests/DoneCommandTest.java
+``` java
+    /**
+     * Runs the undone command to complete the task at specified index and confirms the result is correct.
+     * @param filteredTaskListIndex e.g. index e1 to complete the first task in the event list,
+     * @param currentList A copy of the current list of tasks (before marking undone).
+     * @throws TaskNotFoundException
+     */
+    private void assertUndoneSuccess(TaskType taskType, String filteredTaskListIndex, TestTask[] currentList)
+            throws TaskNotFoundException {
+        commandBox.runCommand(ListCommand.COMMAND_WORD + " done");
+        commandBox.runCommand(UndoneCommand.COMMAND_WORD + " " + filteredTaskListIndex);
+
+        int testTaskIndex = TestUtil.getFilteredIndexInt(filteredTaskListIndex);
+        TestTask[] filteredTaskList = TestUtil.getTasksByTaskType(currentList, taskType);
+        TestTask targetTask = filteredTaskList[testTaskIndex];
+        TestTask copiedTask = new TaskBuilder(targetTask).build();
+
+
+        if (!targetTask.hasRecur()) {
+            targetTask.setIsDone(false);
+        } else {
+            copiedTask.updateTaskRecurDate(true);
+            copiedTask.setIsDone(false);
+            TestTask taskToCheck = copiedTask;
+            if (TestUtil.containsTask(currentList, taskToCheck)) {
+                filteredTaskList = undoneLatestRecur(currentList, targetTask, taskToCheck);
+            } else {
+                System.out.println("hi");
+                undoneNonLatestRecur(targetTask);
+            }
+        }
+
+        //Assert taskListPanel correctly shows tasks that are done
+        TestTask[] filteredDoneList = TestUtil.getTasksByDoneStatus(filteredTaskList, true);
+        assertTrue(taskListPanel.isListMatching(taskType, filteredDoneList));
+
+        //confirm the result message is correct
+        assertResultMessage(String.format(UndoneCommand.MESSAGE_UNDONE_TASK_SUCCESS, targetTask));
+
+        //Assert taskListPanel correctly shows tasks that are undone
+        commandBox.runCommand(ListCommand.COMMAND_WORD);
+        TestTask[] filteredUndoneList = TestUtil.getTasksByDoneStatus(filteredTaskList, false);
+        assertTrue(taskListPanel.isListMatching(taskType, filteredUndoneList));
+    }
+
+    private TestTask[] undoneLatestRecur(TestTask[] currentList, TestTask taskToRemove, TestTask taskToRevert)
+                throws TaskNotFoundException {
+        TestTask[] newFilter = TestUtil.removeTasksFromList(currentList, taskToRemove);
+        newFilter = TestUtil.backwardRecurTaskFromList(newFilter, taskToRevert);
+        return newFilter;
+    }
+
+    private void undoneNonLatestRecur(TestTask taskToUncomplete) {
+        undoneNonParentRecur(taskToUncomplete);
+    }
+
+    private void undoneNonParentRecur(TestTask taskToUncomplete) {
+        taskToUncomplete.removeRecur();
+        taskToUncomplete.setIsDone(false);
+    }
+
+    private TestTask[] doneRecurTestTask(TestTask[] tasks, String filteredTaskListIndex, TaskType taskType) {
+        int testTaskIndex = TestUtil.getFilteredIndexInt(filteredTaskListIndex);
+        TestTask[] filteredTaskList = TestUtil.getTasksByTaskType(tasks, taskType);
+        TestTask targetTask = filteredTaskList[testTaskIndex];
+        TestTask updatedTask = new TestTask(targetTask);
+        updatedTask.updateTaskRecurDate(true);
+        targetTask.setIsDone(true);
+        tasks = TestUtil.addTasksToList(tasks, updatedTask);
+        return TestUtil.replaceTaskFromList(tasks, targetTask, testTaskIndex);
+    }
+
+}
+```
 ###### /java/guitests/FileTransferCommandTest.java
 ``` java
 /**
@@ -34,14 +149,6 @@ public class FileTransferCommandTest extends ToDoListGuiTest {
         ReadOnlyToDoList newToDoList = toDoListStorage.readToDoList().get();
         assertEquals(new ToDoList(newToDoList), new ToDoList(toDoList));
     }
-
-/*    @Test
-    public void save_invalidFileName_exceptionThrown() throws Exception {
-        resetStorages();
-
-        commandBox.runCommand("save " + TEST_INVALID_NAME_FOLDER);
-        assertResultMessage(SaveToCommand.MESSAGE_SAVETO_MAKE_FILE_FAIL);
-    }*/
 
     @Test
     public void save_fileAlreadyExist_exceptionThrown() throws Exception {
@@ -115,24 +222,6 @@ public class FileTransferCommandTest extends ToDoListGuiTest {
         assertEquals(new ToDoList(newToDoList), new ToDoList(toDoList));
     }
 
-/*    @Test
-    public void import_fileNotExist_exceptionThrown() throws Exception {
-        resetStorages();
-
-        commandBox.runCommand("import " + TEST_INVALID_NAME_FOLDER);
-        String result = ImportCommand.MESSAGE_IMPORT_FILE_MISSING
-                + String.format(ImportCommand.MESSAGE_IMPORT_FAILURE, TEST_INVALID_NAME_FOLDER).toString();
-        assertResultMessage(result);
-    }*/
-/*
-    @Test
-    public void export_invalidFileName_exceptionThrown() throws Exception {
-        resetStorages();
-
-        commandBox.runCommand("export " + TEST_INVALID_NAME_FOLDER);
-        assertResultMessage(ExportCommand.MESSAGE_EXPORT_MAKE_FILE_FAIL);
-    }
-*/
     @Test
     public void export_fileAlreadyExist_exceptionThrown() throws Exception {
         resetStorages();
@@ -220,6 +309,190 @@ public class FileTransferCommandTest extends ToDoListGuiTest {
     }
 
 ```
+###### /java/guitests/FindCommandTest.java
+``` java
+public class FindCommandTest extends ToDoListGuiTest {
+
+    @Test
+    public void find_nonEmptyList() {
+        assertNoFindResults(FindCommand.COMMAND_WORD + " Nemo", TaskType.DEADLINE);
+        assertFindResult(FindCommand.COMMAND_WORD + " change", td.taskH.getTaskType(), td.taskH, td.taskI);
+    }
+
+    @Test
+    public void find_short_form_success() {
+        assertNoFindResults(FindCommand.SHORT_COMMAND_WORD + " Nemo", TaskType.DEADLINE);
+        assertFindResult(FindCommand.COMMAND_WORD + " change", td.taskH.getTaskType(), td.taskH, td.taskI);
+    }
+
+    @Test
+    public void find_afterDelete_foundItems() {
+        //find after deleting one result taskH
+        commandBox.runCommand(DeleteCommand.COMMAND_WORD + " t2");
+        assertFindResult(FindCommand.COMMAND_WORD + " change", td.taskH.getTaskType(), td.taskI);
+    }
+
+    @Test
+    public void find_tagKeywords_foundItems() {
+        assertFindResult(FindCommand.COMMAND_WORD + " army", td.taskA.getTaskType(), td.taskA);
+    }
+
+    @Test
+    public void find_descriptionKeyWords_foundItems() {
+        assertFindResult(FindCommand.COMMAND_WORD + " cheap", td.taskG.getTaskType(), td.taskG);
+    }
+
+    @Test
+    public void find_multipleKeywords_foundItems() {
+        //find from main key words which include task name, desciption and tags.
+        //also check if whitespace and comma can be detected
+        commandBox.runCommand(FindCommand.COMMAND_WORD + " cheap, army submit");
+        TestTask[] expectedTasks = { td.taskA, td.taskD, td.taskG };
+        assertListSize(expectedTasks.length);
+        assertResultMessage(expectedTasks.length + " tasks listed!");
+        assertTrue(taskListPanel.isListMatching(TaskType.EVENT, new TestTask[]{td.taskA}));
+        assertTrue(taskListPanel.isListMatching(TaskType.DEADLINE, new TestTask[]{td.taskD}));
+        assertTrue(taskListPanel.isListMatching(TaskType.TODO, new TestTask[]{td.taskG}));
+    }
+
+    @Test
+    public void find_emptyList_notFound() {
+        commandBox.runCommand(ClearCommand.COMMAND_WORD);
+        assertNoFindResults(FindCommand.COMMAND_WORD + " Dory", TaskType.DEADLINE);
+    }
+
+
+    @Test
+    public void find_invalidCommand_fail() {
+        commandBox.runCommand("finds something");
+        assertResultMessage(Messages.MESSAGE_UNKNOWN_COMMAND);
+    }
+
+    private void assertNoFindResults(String command, TaskType type) {
+        assertFindResult(command, type);
+    }
+
+    private void assertFindResult(String command, TaskType type, TestTask... expectedHits) {
+        commandBox.runCommand(command);
+        assertListSize(expectedHits.length);
+        assertResultMessage(expectedHits.length + " tasks listed!");
+        assertTrue(taskListPanel.isListMatching(type, expectedHits));
+    }
+
+}
+```
+###### /java/guitests/ListCommandTest.java
+``` java
+    @Test
+    public void list_orderAlphanumeic_inorder() {
+        TestTask[] deadlineExpected = new TestTask[]{td.taskJ, td.taskE, td.taskF, td.taskD};
+        TestTask[] eventExpected = new TestTask[]{td.taskA, td.taskC, td.taskB};
+        TestTask[] todoExpected = new TestTask[]{td.taskG, td.taskI, td.taskH};
+        assertListInOrder(" o/alphanumeric", deadlineExpected, eventExpected, todoExpected);
+    }
+
+    @Test
+    public void list_orderPriority_inorder() {
+        TestTask[] deadlineExpected = new TestTask[]{td.taskJ, td.taskD, td.taskE, td.taskF};
+        TestTask[] eventExpected = new TestTask[]{td.taskC, td.taskA, td.taskB};
+        TestTask[] todoExpected = new TestTask[]{td.taskG, td.taskH, td.taskI};
+        assertListInOrder(" o/priority", deadlineExpected, eventExpected, todoExpected);
+    }
+
+    @Test
+    public void list_orderDateTime_inorder() {
+        TestTask[] deadlineExpected = new TestTask[]{td.taskD, td.taskJ, td.taskE, td.taskF};
+        TestTask[] eventExpected = new TestTask[]{td.taskC, td.taskB, td.taskA};
+        TestTask[] todoExpected = new TestTask[]{td.taskG, td.taskH, td.taskI};
+        assertListInOrder(" o/datetime", deadlineExpected, eventExpected, todoExpected);
+    }
+
+```
+###### /java/guitests/ListCommandTest.java
+``` java
+    private void assertListInOrder(String command, TestTask[] deadlineExpected,
+            TestTask[] eventExpected, TestTask[] toDoExpected) {
+        commandBox.runCommand(ListCommand.COMMAND_WORD + command);
+        assertTrue(taskListPanel.isListMatching(TaskType.EVENT, eventExpected));
+        assertTrue(taskListPanel.isListMatching(TaskType.DEADLINE, deadlineExpected));
+        assertTrue(taskListPanel.isListMatching(TaskType.TODO, toDoExpected));
+        assertResultMessage(ListCommand.MESSAGE_LIST_UNDONE_SUCCESS);
+    }
+}
+```
+###### /java/seedu/onetwodo/model/task/NameTest.java
+``` java
+public class NameTest {
+
+    @Test
+    public void isValidName() {
+        // invalid name
+        assertFalse(Name.isValidName("")); // empty string
+        assertFalse(Name.isValidName(" ")); // spaces only
+        assertFalse(Name.isValidName("^")); // only non-alphanumeric characters
+        assertFalse(Name.isValidName("peter*")); // contains non-alphanumeric characters
+
+        // valid name
+        assertTrue(Name.isValidName("do assignments")); // alphabets only
+        assertTrue(Name.isValidName("12345")); // numbers only
+        assertTrue(Name.isValidName("do number 1 hardest tutorial")); // alphanumeric characters
+        assertTrue(Name.isValidName("Do wOrK")); // with capital letters
+        assertTrue(Name.isValidName("YOYOYO today main task is CS2103 tutorial 5")); // long names
+    }
+}
+```
+###### /java/seedu/onetwodo/testutil/TestTask.java
+``` java
+    public void updateTaskRecurDate(boolean isForward) {
+        assert this.getTaskType() != TaskType.TODO;
+        int amtToAdd = isForward ? 1 : -1;
+        StartDate tempStartDate;
+        EndDate tempEndDate = getEndDate();
+        switch(this.getRecur().value) {
+        case Recurring.RECUR_DAILY:
+            this.setEndDate(new EndDate(tempEndDate.getLocalDateTime().plusDays(amtToAdd)));
+            if (this.hasStartDate()) {
+                tempStartDate = getStartDate();
+                this.setStartDate(new StartDate(tempStartDate.getLocalDateTime().plusDays(amtToAdd)));
+            }
+            break;
+        case Recurring.RECUR_WEEKLY:
+            this.setEndDate(new EndDate(tempEndDate.getLocalDateTime().plusWeeks(amtToAdd)));
+            if (this.hasStartDate()) {
+                tempStartDate = getStartDate();
+                this.setStartDate(new StartDate(tempStartDate.getLocalDateTime().plusWeeks(amtToAdd)));
+            }
+            break;
+        case Recurring.RECUR_MONTHLY:
+            this.setEndDate(new EndDate(tempEndDate.getLocalDateTime().plusMonths(amtToAdd)));
+            if (this.hasStartDate()) {
+                tempStartDate = getStartDate();
+                this.setStartDate(new StartDate(tempStartDate.getLocalDateTime().plusMonths(amtToAdd)));
+            }
+            break;
+        case Recurring.RECUR_YEARLY:
+            this.setEndDate(new EndDate(tempEndDate.getLocalDateTime().plusYears(amtToAdd)));
+            if (this.hasStartDate()) {
+                tempStartDate = getStartDate();
+                this.setStartDate(new StartDate(tempStartDate.getLocalDateTime().plusYears(amtToAdd)));
+            }
+            break;
+        default:
+            break;
+        }
+    }
+
+    public void removeRecur() {
+        try {
+            this.setRecur(new Recurring(""));
+        } catch (IllegalValueException e) {
+            System.err.println("Invalid value when creating Recurring");
+            e.printStackTrace();
+        }
+    }
+
+}
+```
 ###### /java/seedu/onetwodo/testutil/TestUtil.java
 ``` java
     private static Task[] getSampleTaskData() {
@@ -263,6 +536,18 @@ public class FileTransferCommandTest extends ToDoListGuiTest {
     }
 
 ```
+###### /java/seedu/onetwodo/testutil/TestUtil.java
+``` java
+    public static boolean containsTask(TestTask[] list, TestTask target) {
+        for (int n = 0; n < list.length; n++) {
+            if (list[n].isSameStateAs(target)) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+```
 ###### /java/seedu/onetwodo/testutil/TypicalTestTasks.java
 ``` java
 /**
@@ -270,14 +555,14 @@ public class FileTransferCommandTest extends ToDoListGuiTest {
  */
 public class TypicalTestTasks {
 
-    public TestTask taskA, taskB, taskC, taskD, taskE, taskF, taskG, taskH, taskI,
+    public TestTask taskA, taskB, taskC, taskD, taskE, taskF, taskG, taskH, taskI, taskJ,
             task1, task2, task3;
 
     public TypicalTestTasks() {
         try {
             // Event with all info
             taskA = new TaskBuilder().withName("guard duty")
-                    .withStartDate("15/12/2018 7am").withEndDate("16/12/2018 11pm")
+                    .withStartDate("15 dec 2018 7am").withEndDate("16 dec 2018 11pm")
                     .withRecurring("monthly")
                     .withDescription("bring weapon")
                     .withTags("army", "work")
@@ -294,7 +579,7 @@ public class TypicalTestTasks {
             // Event with many missing info
             taskC = new TaskBuilder().withName("meet boss")
                     .withStartDate("10 Mar 2018 08:00").withEndDate("10 mar 2018 12:00")
-                    .withRecurring("")
+                    .withRecurring("yearly")
                     .withDescription("")
                     .withPriority('h')
                     .build();
@@ -316,10 +601,18 @@ public class TypicalTestTasks {
                     .build();
             // Deadline with many missing info
             taskF = new TaskBuilder().withName("finish assignments")
-                    .withStartDate("").withEndDate("11pm")
+                    .withStartDate("").withEndDate("next week 11pm")
                     .withRecurring("monthly")
                     .withDescription("")
                     .withPriority('l')
+                    .build();
+            // Deadline with daily recurring
+            taskJ = new TaskBuilder().withName("Do pushup everyday")
+                    .withStartDate("").withEndDate("today 1159")
+                    .withRecurring("daily")
+                    .withDescription("Do 20")
+                    .withTags("favourite")
+                    .withPriority('m')
                     .build();
             // To-do with all info
             taskG = new TaskBuilder().withName("buy new bag")
@@ -387,7 +680,7 @@ public class TypicalTestTasks {
      * @return TestTask[] containing default tasks A to I
      */
     public TestTask[] getTypicalTasks() {
-        return new TestTask[]{taskA, taskB, taskC, taskD, taskE, taskF, taskG, taskH, taskI};
+        return new TestTask[]{taskA, taskB, taskC, taskD, taskE, taskF, taskG, taskH, taskI, taskJ};
     }
 
     public ToDoList getTypicalToDoList() {
