--- a/collated/test/A0143029M.md
+++ b/collated/test/A0143029M.md
@@ -6,26 +6,12 @@ public class CommandBoxTest extends ToDoListGuiTest {
     private static final String COMMAND_THAT_SUCCEEDS = "select t3";
     private static final String COMMAND_THAT_FAILS = "invalid command";
 
-    private ArrayList<String> defaultStyleOfCommandBox;
-    private ArrayList<String> errorStyleOfCommandBox;
-
-    @Before
-    public void setUp() {
-        defaultStyleOfCommandBox = new ArrayList<>(commandBox.getStyleClass());
-        assertFalse("CommandBox default style classes should not contain error style class.",
-                defaultStyleOfCommandBox.contains(CommandBox.ERROR_STYLE_CLASS));
-
-        // build style class for error
-        errorStyleOfCommandBox = new ArrayList<>(defaultStyleOfCommandBox);
-        errorStyleOfCommandBox.add(CommandBox.ERROR_STYLE_CLASS);
-    }
-
     @Test
     public void commandBox_commandSucceeds_textClearedAndStyleClassRemainsTheSame() {
         commandBox.runCommand(COMMAND_THAT_SUCCEEDS);
 
         assertEquals("", commandBox.getCommandInput());
-        assertEquals(defaultStyleOfCommandBox, commandBox.getStyleClass());
+        assertEquals(false, commandBox.isErrorStyleApplied());
     }
 
     @Test
@@ -33,18 +19,81 @@ public class CommandBoxTest extends ToDoListGuiTest {
         commandBox.runCommand(COMMAND_THAT_FAILS);
 
         assertEquals(COMMAND_THAT_FAILS, commandBox.getCommandInput());
-        assertEquals(errorStyleOfCommandBox, commandBox.getStyleClass());
+        assertEquals(true, commandBox.isErrorStyleApplied());
     }
 
     @Test
     public void commandBox_commandSucceedsAfterFailedCommand_textClearedAndErrorStyleClassRemoved() {
         // add error style to simulate a failed command
-        commandBox.getStyleClass().add(CommandBox.ERROR_STYLE_CLASS);
-
+        commandBox.setErrorPseudoStyleClass();
         commandBox.runCommand(COMMAND_THAT_SUCCEEDS);
 
         assertEquals("", commandBox.getCommandInput());
-        assertEquals(defaultStyleOfCommandBox, commandBox.getStyleClass());
+        assertEquals(false, commandBox.isErrorStyleApplied());
+    }
+
+    @Test
+    public void commandBox_commandHistoryUndoRedo() {
+        String doneCommand = DoneCommand.COMMAND_WORD + " e1";
+        commandBox.runCommand(doneCommand);
+        mainGui.pressKey(KeyCode.UP);
+        assertEquals(commandBox.getCommandInput(), doneCommand);
+        mainGui.pressKey(KeyCode.DOWN);
+        assertEquals(commandBox.getCommandInput(), "");
+    }
+}
+```
+###### /java/guitests/DeleteCommandTest.java
+``` java
+public class DeleteCommandTest extends ToDoListGuiTest {
+
+    @Test
+    public void delete() {
+        TestTask[] currentList = td.getTypicalTasks();
+
+        // invalid index
+        commandBox.runCommand(DeleteCommand.COMMAND_WORD + " e99999");
+        assertResultMessage("The task index provided is invalid");
+
+        // invalid command
+        commandBox.runCommand(DeleteCommand.COMMAND_WORD + " e-1");
+        assertResultMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT, DeleteCommand.MESSAGE_USAGE));
+
+        // delete first event
+        assertDeleteSuccess(DeleteCommand.COMMAND_WORD, TaskType.EVENT, 3, currentList);
+        currentList = TestUtil.removeTaskFromList(currentList, 3);
+
+        assertDeleteSuccess(DeleteCommand.SHORT_COMMAND_WORD, TaskType.EVENT, 2, currentList);
+        currentList = TestUtil.removeTaskFromList(currentList, 2);
+
+        assertDeleteSuccess(DeleteCommand.COMMAND_WORD, TaskType.EVENT, 1, currentList);
+        currentList = TestUtil.removeTaskFromList(currentList, 1);
+
+        // empty list
+        commandBox.runCommand(ClearCommand.COMMAND_WORD);
+        commandBox.runCommand(DeleteCommand.COMMAND_WORD + " e1");
+        assertResultMessage("The task index provided is invalid");
+    }
+
+    /**
+     * Runs the delete command to delete the task at specified index and confirms the result is correct.
+     * @param commandString The command to be executed, can be either "delete" or its short form "d"
+     * @param targetIndexOneIndexed e.g. index 1 to delete the first task in the list,
+     * @param currentList A copy of the current list of tasks (before deletion).
+     */
+    private void assertDeleteSuccess(String commandString, TaskType taskType, int targetIndexOneIndexed,
+            final TestTask[] currentList) {
+        TestTask[] filteredTasks = TestUtil.getTasksByTaskType(currentList, taskType);
+        TestTask[] expectedRemainder = TestUtil.removeTaskFromList(filteredTasks, targetIndexOneIndexed);
+
+        commandBox.runCommand(commandString + " " + taskType.getPrefix() + targetIndexOneIndexed);
+
+        //confirm the list now contains all previous tasks except the deleted task
+        assertTrue(taskListPanel.isListMatching(taskType, expectedRemainder));
+
+        //confirm the result message is correct
+        ReadOnlyTask taskToDelete = filteredTasks[targetIndexOneIndexed - 1]; // -1 as array uses zero indexing
+        assertResultMessage(String.format(MESSAGE_DELETE_TASK_SUCCESS, taskToDelete));
     }
 
 }
@@ -53,10 +102,7 @@ public class CommandBoxTest extends ToDoListGuiTest {
 ``` java
 public class EditCommandTest extends ToDoListGuiTest {
 
-    // The list of tasks in the task list panel is expected to match this list.
-    // This list is updated with every successful call to assertEditSuccess().
     TestTask[] tasksList = td.getTypicalTasks();
-
 
     @Test
     public void edit_allFieldsSpecified_success() throws Exception {
@@ -65,6 +111,7 @@ public class EditCommandTest extends ToDoListGuiTest {
 
         TestTask editedTask = new TaskBuilder().withName("GUARD duties")
                 .withStartDate("15-12-2018 7:30am").withEndDate("16-12-2018 11:30pm")
+                .withRecurring("monthly")
                 .withDescription("bring helmet")
                 .withPriority('l')
                 .withTags("army")
@@ -128,6 +175,12 @@ public class EditCommandTest extends ToDoListGuiTest {
     }
 
     @Test
+    public void parse_short_form_success() {
+        commandBox.runCommand(EditCommand.SHORT_COMMAND_WORD + " Bobby");
+        assertResultMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT, EditCommand.MESSAGE_USAGE));
+    }
+
+    @Test
     public void edit_missingTaskIndex_failure() {
         commandBox.runCommand(EditCommand.COMMAND_WORD + " Bobby");
         assertResultMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT, EditCommand.MESSAGE_USAGE));
@@ -165,7 +218,8 @@ public class EditCommandTest extends ToDoListGuiTest {
 
     @Test
     public void edit_duplicateTask_failure() {
-        commandBox.runCommand(EditCommand.COMMAND_WORD + " e1 study at home s/tmr 9pm e/tmr 10pm");
+        commandBox.runCommand(EditCommand.COMMAND_WORD
+                + " e1 study at home s/10 Mar 2018 e/13 mar 2018 r/weekly t/work t/school p/l d/");
         assertResultMessage(EditCommand.MESSAGE_DUPLICATE_TASK);
     }
 
@@ -185,7 +239,6 @@ public class EditCommandTest extends ToDoListGuiTest {
     private void assertEditSuccess(String filteredTaskListIndex, String detailsToEdit, TestTask editedTask,
             TestTask[] expected) {
         commandBox.runCommand(EditCommand.COMMAND_WORD + " " + filteredTaskListIndex + " " + detailsToEdit);
-
         int testTaskIndex = TestUtil.getFilteredIndexInt(filteredTaskListIndex);
 
         // confirm the new card contains the right data
@@ -200,4 +253,94 @@ public class EditCommandTest extends ToDoListGuiTest {
 
 }
 
+```
+###### /java/guitests/HelpWindowTest.java
+``` java
+public class HelpWindowTest extends ToDoListGuiTest {
+
+    @Test
+    public void openHelpWindow() {
+        //use accelerator
+        commandBox.clickOnTextField();
+        assertHelpWindowOpen(mainMenu.openHelpWindowUsingAccelerator());
+
+        resultDisplay.clickOnTextArea();
+        assertHelpWindowOpen(mainMenu.openHelpWindowUsingAccelerator());
+
+        taskListPanel.clickOnListView();
+        assertHelpWindowOpen(mainMenu.openHelpWindowUsingAccelerator());
+
+        //use menu button
+        assertHelpWindowOpen(mainMenu.openHelpWindowUsingMenu());
+
+        //use command
+        commandBox.clickOnTextField();
+        assertHelpWindowOpen(commandBox.runHelpCommand());
+
+        //use command short form
+        commandBox.clickOnTextField();
+        assertHelpWindowOpen(commandBox.runHelpCommandWithShortForm());
+    }
+
+    private void assertHelpWindowOpen(HelpWindowHandle helpWindowHandle) {
+        assertResultMessage(HelpCommand.SHOWING_HELP_MESSAGE);
+    }
+}
+```
+###### /java/guitests/SelectCommandTest.java
+``` java
+public class SelectCommandTest extends ToDoListGuiTest {
+
+
+    @Test
+    public void selectTask_nonEmptyList() {
+        assertNoTaskSelected();
+
+        assertSelectionSuccess("t1"); // first to-do task in the list
+        assertSelectionSuccess("e2"); // 2nd event task in the list
+        assertSelectionSuccess("d3"); // last deadline task in the list
+
+        // invalid index
+        assertSelectionInvalid("t4");
+
+        commandBox.runCommand(SelectCommand.COMMAND_WORD + " t0");
+        assertResultMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT, SelectCommand.MESSAGE_USAGE));
+
+        commandBox.runCommand(SelectCommand.COMMAND_WORD + " t-1");
+        assertResultMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT, SelectCommand.MESSAGE_USAGE));
+    }
+
+    @Test
+    public void selectTask_emptyList() {
+        commandBox.runCommand("clear");
+        assertListSize(0);
+        assertSelectionInvalid("t1"); //invalid index
+    }
+
+    private void assertSelectionInvalid(String prefixIndex) {
+        commandBox.runCommand("select " + prefixIndex);
+        assertResultMessage("The task index provided is invalid");
+    }
+
+    private void assertSelectionSuccess(String prefixIndex) {
+        commandBox.runCommand("select " + prefixIndex);
+        String displayPrefixIndex = TestUtil.getTaskTypeFromIndex(prefixIndex).getPrefix() + prefixIndex.substring(1);
+        assertResultMessage("Selected Task: " + displayPrefixIndex);
+        assertTaskSelected(prefixIndex);
+    }
+
+    private void assertTaskSelected(String filteredIndex) {
+        TaskType taskType = TestUtil.getTaskTypeFromIndex(filteredIndex);
+        int index = TestUtil.getFilteredIndexInt(filteredIndex);
+
+        assertEquals(taskListPanel.getSelectedTasks(taskType).size(), 1);
+        ReadOnlyTask selectedTask = taskListPanel.getSelectedTasks(taskType).get(0);
+        assertEquals(taskListPanel.getTask(taskType, index), selectedTask);
+    }
+
+    private void assertNoTaskSelected() {
+        assertEquals(taskListPanel.getSelectedTasks().size(), 0);
+    }
+
+}
 ```
