--- a/collated/main/A0141138N.md
+++ b/collated/main/A0141138N.md
@@ -1,4 +1,109 @@
 # A0141138N
+###### /java/seedu/onetwodo/commons/events/ui/ShowHelpRequestEvent.java
+``` java
+/**
+ * An event requesting to view the help page.
+ */
+public class ShowHelpRequestEvent extends BaseEvent {
+
+    @Override
+    public String toString() {
+        return this.getClass().getSimpleName();
+    }
+
+}
+```
+###### /java/seedu/onetwodo/commons/events/ui/ShowHelpUGRequestEvent.java
+``` java
+/**
+ * An event requesting to view the userguide.
+ */
+public class ShowHelpUGRequestEvent extends BaseEvent {
+    @Override
+    public String toString() {
+        return this.getClass().getSimpleName();
+    }
+
+}
+```
+###### /java/seedu/onetwodo/logic/commands/HelpCommand.java
+``` java
+/**
+ * Format full help instructions for every command for display.
+ */
+public class HelpCommand extends Command {
+
+    public static final String COMMAND_WORD = "help";
+    public static final String SHORT_COMMAND_WORD = "h";
+
+    public static final String SHORT_USERGUIDE = "ug";
+    public static final String LONG_USERGUIDE = "userguide";
+
+    public static final String MESSAGE_USAGE = COMMAND_WORD + ": Shows program usage instructions.\n" + "Example: "
+            + COMMAND_WORD;
+
+    public static final String SHOWING_HELP_MESSAGE = "Opened help window.";
+    public static final String SHOWING_HELP_MESSAGE_USERGUIDE = "Opened user guide.";
+
+    private String commandArgument;
+
+    public HelpCommand(String commandArgument) {
+        this.commandArgument = commandArgument;
+    }
+
+    @Override
+    public CommandResult execute() {
+        String messageToReturn;
+
+        switch (commandArgument) {
+        case SHORT_USERGUIDE:
+            EventsCenter.getInstance().post(new ShowHelpUGRequestEvent());
+            messageToReturn = SHOWING_HELP_MESSAGE_USERGUIDE;
+            break;
+
+        case LONG_USERGUIDE:
+            EventsCenter.getInstance().post(new ShowHelpUGRequestEvent());
+            messageToReturn = SHOWING_HELP_MESSAGE_USERGUIDE;
+            break;
+        default:
+            EventsCenter.getInstance().post(new ShowHelpRequestEvent());
+            messageToReturn = SHOWING_HELP_MESSAGE;
+        }
+        return new CommandResult(messageToReturn);
+    }
+}
+```
+###### /java/seedu/onetwodo/logic/parser/HelpCommandParser.java
+``` java
+/**
+ * Parses input arguments and creates a new ClearCommand object
+ */
+public class HelpCommandParser {
+
+    public static final String DEFAULT = "";
+    public static final String SHORT_USERGUIDE = "ug";
+    public static final String LONG_USERGUIDE = "userguide";
+
+    /**
+     * Parses the given {@code String} of arguments in the context of the
+     * HelpCommand and returns an HelpCommand object for execution.
+     */
+    public Command parse(String args) {
+        String argsTrimmed = args.trim();
+        switch (argsTrimmed.toLowerCase()) {
+        case DEFAULT:
+            return new HelpCommand(DEFAULT);
+        case SHORT_USERGUIDE:
+            return new HelpCommand(SHORT_USERGUIDE);
+
+        case LONG_USERGUIDE:
+            return new HelpCommand(LONG_USERGUIDE);
+        default:
+            return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, HelpCommand.MESSAGE_USAGE));
+        }
+    }
+}
+```
 ###### /java/seedu/onetwodo/logic/parser/ParserUtil.java
 ``` java
     /**
@@ -11,26 +116,40 @@
     }
 
 ```
+###### /java/seedu/onetwodo/model/Model.java
+``` java
+    /**
+     * Updates the filter of the filtered task list to display all tasks for
+     * today
+     */
+    void updateFilteredTodayTaskList();
+
+```
 ###### /java/seedu/onetwodo/model/ModelManager.java
 ``` java
     @Override
-    public synchronized void todayTask(ReadOnlyTask taskForToday) throws IllegalValueException {
-        if (taskForToday.getTodayStatus() == false) {
-            throw new IllegalValueException("This task is not for today");
-        }
-        ToDoList copiedCurrentToDoList = new ToDoList(this.toDoList);
-        toDoList.todayTask(taskForToday);
-        history.saveUndoInformationAndClearRedoHistory(AddCommand.COMMAND_WORD, taskForToday, copiedCurrentToDoList);
-        indicateToDoListChanged();
+    public void updateFilteredTodayTaskList() {
+        updateFilteredTaskList(new PredicateExpression(p -> p.getTodayStatus() == true));
+    }
+
+```
+###### /java/seedu/onetwodo/model/ModelManager.java
+``` java
+    @Override
+    public void updateByTaskType(TaskType taskType) {
+        updateFilteredTaskList(new PredicateExpression(p -> p.getTaskType() == taskType));
+    }
+
+```
+###### /java/seedu/onetwodo/model/ModelManager.java
+``` java
+    private boolean isPrioritySame(ReadOnlyTask task, Priority p) {
+        return task.getPriority().value.equals(p.value);
     }
 
 ```
 ###### /java/seedu/onetwodo/model/task/Priority.java
 ``` java
-package seedu.onetwodo.model.task;
-
-import seedu.onetwodo.commons.exceptions.IllegalValueException;
-
 /**
  * Represents a Task's priority in the toDo list. Guarantees: immutable; is
  * valid as declared in {@link #isValidPriority(Char)}
@@ -55,28 +174,32 @@ public class Priority implements Comparable<Priority> {
     public Priority(String priority) throws IllegalValueException {
         assert priority != null;
         priority = priority.trim();
-        String upperPriority = priority.toUpperCase();
-        if (priority.isEmpty()) {
-            value = priority;
-        } else if (upperPriority.length() > 1) {
-            switch (upperPriority) {
-            case HIGH_LABEL:
-                this.value = HIGH_LABEL;
-                break;
-            case MEDIUM_LABEL:
-                this.value = MEDIUM_LABEL;
-                break;
-            case LOW_LABEL:
-                this.value = LOW_LABEL;
-                break;
-            default:
-                throw new IllegalValueException(PRIORITY_CONSTRAINTS);
-            }
+        if (!isValidPriority(priority)) {
+            throw new IllegalValueException(PRIORITY_CONSTRAINTS);
         } else {
-            char firstLetter = upperPriority.charAt(0);
-            if (!isValidPriority(firstLetter)) {
-                throw new IllegalValueException(PRIORITY_CONSTRAINTS);
-            }
+            setPriority(priority);
+        }
+    }
+
+    /**
+     * Returns true if a given string is a valid task priority.
+     */
+    public static boolean isValidPriority(String userInput) {
+        userInput = userInput.toUpperCase();
+        return userInput.isEmpty() || userInput.charAt(0) == HIGH_CHAR || userInput.charAt(0) == MEDIUM_CHAR
+                || userInput.charAt(0) == LOW_CHAR;
+    }
+
+    /**
+     * Sets the priority
+     *
+     * @param upperPriority
+     */
+    private void setPriority(String upperPriority) {
+        if (upperPriority.isEmpty()) {
+            this.value = "";
+        } else {
+            char firstLetter = upperPriority.toUpperCase().charAt(0);
             switch (firstLetter) {
             case HIGH_CHAR:
                 this.value = HIGH_LABEL;
@@ -88,16 +211,8 @@ public class Priority implements Comparable<Priority> {
                 this.value = LOW_LABEL;
                 break;
             default:
-                throw new IllegalValueException(PRIORITY_CONSTRAINTS);
             }
         }
-    }
-
-    /**
-     * Returns true if a given string is a valid task priority.
-     */
-    public static boolean isValidPriority(char test) {
-        return ((test == HIGH_CHAR) || (test == MEDIUM_CHAR) || (test == LOW_CHAR));
     }
 
     public boolean hasPriority() {
@@ -113,7 +228,8 @@ public class Priority implements Comparable<Priority> {
     public boolean equals(Object other) {
         return other == this // short circuit if same object
                 || (other instanceof Priority // instanceof handles nulls
-                        && this.value.equals(((Priority) other).value)); // state check
+                        && this.value.equals(((Priority) other).value)); // state
+        // check
     }
 
     @Override
@@ -121,25 +237,6 @@ public class Priority implements Comparable<Priority> {
         return value.hashCode();
     }
 
-    @Override
-    public int compareTo(Priority p) {
-        if (!hasPriority()) {
-            return -1;
-        }
-        if (!p.hasPriority()) {
-            return 1;
-        }
-        if (p.value.equals(value)) {
-            return 0;
-        }
-        switch(value) {
-        case HIGH_LABEL: return 1;
-        case MEDIUM_LABEL: return p.value.equals(LOW_LABEL) ? 1 : -1;
-        case LOW_LABEL: return -1;
-        default: return -1;
-        }
-    }
-}
 ```
 ###### /java/seedu/onetwodo/model/task/ReadOnlyTask.java
 ``` java
@@ -153,8 +250,8 @@ public class Priority implements Comparable<Priority> {
     /**
      * Every field must be present and not null. Event
      */
-    public Task(Name name, StartDate startDate, EndDate endDate, Recurring recur,
-            Priority priority, Description description, UniqueTagList tags) {
+    public Task(Name name, StartDate startDate, EndDate endDate, Recurring recur, Priority priority,
+            Description description, UniqueTagList tags) {
         this.name = name;
         this.startDate = startDate;
         this.endDate = endDate;
@@ -168,7 +265,7 @@ public class Priority implements Comparable<Priority> {
         isToday(startDate, endDate);
     }
 
-    // @@ author A0141138N
+    //@@ author A0141138N
     private void checkTaskType(StartDate startDate, EndDate endDate) {
         if (!startDate.hasDate() && !endDate.hasDate()) {
             this.type = TaskType.TODO;
@@ -218,9 +315,39 @@ public class Priority implements Comparable<Priority> {
 ```
 ###### /java/seedu/onetwodo/model/task/Task.java
 ``` java
-    public void setPriority(Priority priority) {
-        assert priority != null;
-        this.priority = priority;
+    @Override
+    public boolean getTodayStatus() {
+        return isToday;
+    }
+
+```
+###### /java/seedu/onetwodo/model/task/Task.java
+``` java
+    @Override
+    public TaskType getTaskType() {
+        return type;
+    }
+
+```
+###### /java/seedu/onetwodo/model/task/Task.java
+``` java
+    public void setToday() {
+        assert isToday == false;
+        isToday = true;
+    }
+
+```
+###### /java/seedu/onetwodo/model/task/Task.java
+``` java
+    public void setTaskType(TaskType type) {
+        this.type = type;
+    }
+
+    /**
+     * Replaces this task's tags with the tags in the argument tag list.
+     */
+    public void setTags(UniqueTagList replacement) {
+        tags.setTags(replacement);
     }
 
 ```
@@ -231,7 +358,11 @@ public enum TaskType {
     EVENT('E'),
     TODO('T');
 
+    public static final String EVENT_STRING = "Event";
+    public static final String TO_DO_STRING = "To-do";
+    public static final String DEADLINE_STRING = "Deadline";
     private final char prefix;
+
 
     TaskType(char prefix) {
         this.prefix = prefix;
@@ -246,6 +377,17 @@ public enum TaskType {
         return String.valueOf(prefix);
     }
 
+    public String getDescription() {
+        switch (this) {
+        case DEADLINE:
+            return DEADLINE_STRING;
+        case EVENT:
+            return EVENT_STRING;
+        default:
+        case TODO:
+            return TO_DO_STRING;
+        }
+    }
     public static char[] getAllPrefixes() {
         return new char[] {TODO.prefix, DEADLINE.prefix, EVENT.prefix};
     }
@@ -262,6 +404,33 @@ public enum TaskType {
         return null;
     }
 }
+```
+###### /java/seedu/onetwodo/model/task/UniqueTaskList.java
+``` java
+    /**
+     * Marks the equivalent task as task for today.
+     */
+    public void today(ReadOnlyTask taskForToday) {
+        int index = internalList.indexOf(taskForToday);
+        assert index >= 0;
+        Task targetTask = (Task) taskForToday;
+        targetTask.setToday();
+        internalList.set(index, targetTask);
+    }
+
+```
+###### /java/seedu/onetwodo/model/ToDoList.java
+``` java
+    public void todayTask(ReadOnlyTask taskForToday) {
+        tasks.today(taskForToday);
+    }
+
+    //// tag-level operations
+
+    public void addTag(Tag t) throws UniqueTagList.DuplicateTagException {
+        tags.add(t);
+    }
+
 ```
 ###### /java/seedu/onetwodo/model/util/SampleDataUtil.java
 ``` java
@@ -300,21 +469,59 @@ public enum TaskType {
         }
     }
 
-    public static ReadOnlyToDoList getSampleToDoList() {
-        try {
-            ToDoList sampleAB = new ToDoList();
-            for (Task sampleTask : getSampleTasks()) {
-                sampleAB.addTask(sampleTask);
-            }
-            return sampleAB;
-        } catch (DuplicateTaskException e) {
-            throw new AssertionError("sample data cannot contain duplicate tasks", e);
-        }
+```
+###### /java/seedu/onetwodo/ui/HelpUGWindow.java
+``` java
+public class HelpUGWindow extends UiPart<Region> {
+    private static final Logger logger = LogsCenter.getLogger(HelpWindow.class);
+    private static final String ICON = "/images/help_icon.png";
+    private static final String FXML = "HelpWindow.fxml";
+    private static final String TITLE = "Userguide";
+    private static final String USERGUIDE_URL = "https://cs2103jan2017-f14-b1.github.io/main/UserGuide.html";
+
+    @FXML
+    private WebView browser;
+
+    private final Stage dialogStage;
+
+    public HelpUGWindow() {
+        super(FXML);
+        Scene scene = new Scene(getRoot());
+        // Null passed as the parent stage to make it non-modal.
+        dialogStage = createDialogStage(TITLE, null, scene);
+        dialogStage.setMaximized(false); // TODO: set a more appropriate initial
+        // size
+        FxViewUtil.setStageIcon(dialogStage, ICON);
+        browser.getEngine().load(USERGUIDE_URL);
+        FxViewUtil.applyAnchorBoundaryParameters(browser, 0.0, 0.0, 0.0, 0.0);
+    }
+
+    public void show() {
+        logger.fine("Showing user guide for the application.");
+        dialogStage.showAndWait();
     }
 }
 ```
 ###### /java/seedu/onetwodo/ui/HelpWindow.java
 ``` java
+/**
+ * Controller for a help page
+ */
+public class HelpWindow extends UiPart<Region> {
+
+    private static final Logger logger = LogsCenter.getLogger(HelpWindow.class);
+
+    private static final String ICON = "/images/help_icon.png";
+    private static final String FXML = "HelpWindow.fxml";
+    private static final String TITLE = "Cheatsheet";
+    private static final String HELPWINDOW_URL = "/view/help.html";
+    public static final String HELP_WINDOW_ROOT_FIELD_ID = "#helpWindowRoot";
+
+    @FXML
+    private WebView browser;
+
+    private final Stage dialogStage;
+
     public HelpWindow() {
         super(FXML);
         Scene scene = new Scene(getRoot());
@@ -335,25 +542,41 @@ public enum TaskType {
     }
 }
 ```
+###### /java/seedu/onetwodo/ui/MainWindow.java
+``` java
+    @FXML
+    public void handleHelp() {
+        showHTML(HELPWINDOW_URL);
+    }
+
+```
+###### /java/seedu/onetwodo/ui/MainWindow.java
+``` java
+    @FXML
+    public void handleHelpUG() {
+        showHTML(USERGUIDE_URL);
+    }
+
+    public void showWelcomeDialog() {
+        welcomeWindow = new WelcomeWindow(logic);
+        JFXDialogLayout content = new JFXDialogLayout();
+        Region root = welcomeWindow.todayTaskListPanel.getRoot();
+        Label header = new Label();
+        if (!welcomeWindow.todayTaskListPanel.isEmpty) {
+            header.setText(WelcomeWindow.WELCOME);
+        } else {
+            header.setText(WelcomeWindow.DEFAULT);
+        }
+        content.setHeading(header);
+        content.setBody(root);
+        dialog = new JFXDialog(dialogStackPane, content, JFXDialog.DialogTransition.CENTER, true);
+        dialog.show();
+        closeDialogOnNextKeyPress();
+    }
+
+```
 ###### /java/seedu/onetwodo/ui/TodayTaskList.java
 ``` java
-package seedu.onetwodo.ui;
-
-import java.util.logging.Logger;
-
-import javafx.application.Platform;
-import javafx.collections.ObservableList;
-import javafx.collections.transformation.FilteredList;
-import javafx.fxml.FXML;
-import javafx.scene.control.ListCell;
-import javafx.scene.control.ListView;
-import javafx.scene.control.SplitPane;
-import javafx.scene.layout.AnchorPane;
-import javafx.scene.layout.Region;
-import seedu.onetwodo.commons.core.LogsCenter;
-import seedu.onetwodo.commons.util.FxViewUtil;
-import seedu.onetwodo.model.task.ReadOnlyTask;
-
 public class TodayTaskList extends UiPart<Region> {
     private final Logger logger = LogsCenter.getLogger(TodayTaskList.class);
     private static final String FXML = "TaskListPanel.fxml";
@@ -420,16 +643,26 @@ public class TodayTaskList extends UiPart<Region> {
 
 }
 ```
+###### /java/seedu/onetwodo/ui/UiManager.java
+``` java
+    @Subscribe
+    private void handleShowHelpEvent(ShowHelpRequestEvent event) {
+        logger.info(LogsCenter.getEventHandlingLogMessage(event));
+        mainWindow.handleHelp();
+    }
+
+```
+###### /java/seedu/onetwodo/ui/UiManager.java
+``` java
+    @Subscribe
+    private void handleShowHelpUGEvent(ShowHelpUGRequestEvent event) {
+        logger.info(LogsCenter.getEventHandlingLogMessage(event));
+        mainWindow.handleHelpUG();
+    }
+
+```
 ###### /java/seedu/onetwodo/ui/WelcomeWindow.java
 ``` java
-package seedu.onetwodo.ui;
-
-import javafx.fxml.FXML;
-import javafx.scene.layout.AnchorPane;
-import javafx.scene.layout.Region;
-
-import seedu.onetwodo.logic.Logic;
-
 public class WelcomeWindow extends UiPart<Region> {
 
     private static final String FXML = "WelcomeWindow.fxml";
