--- a/collated/test/A0135739W.md
+++ b/collated/test/A0135739W.md
@@ -1,10 +1,113 @@
 # A0135739W
-###### /java/guitests/DoneCommandTest.java
+###### /java/guitests/ClearCommandTest.java
 ``` java
-public class DoneCommandTest extends ToDoListGuiTest {
+package guitests;
+
+import static org.junit.Assert.assertTrue;
+import static seedu.onetwodo.commons.core.Messages.MESSAGE_INVALID_COMMAND_FORMAT;
+
+import org.junit.Test;
+
+import seedu.onetwodo.logic.commands.ClearCommand;
+import seedu.onetwodo.logic.commands.DeleteCommand;
+import seedu.onetwodo.logic.commands.DoneCommand;
+import seedu.onetwodo.logic.commands.ListCommand;
+import seedu.onetwodo.model.task.TaskType;
+import seedu.onetwodo.testutil.TestTask;
+
+public class ClearCommandTest extends ToDoListGuiTest {
 
     TestTask[] currentList = td.getTypicalTasks();
 
+    @Test
+    public void clear_invalid_input_failure () {
+        commandBox.runCommand(ClearCommand.COMMAND_WORD + " ddoonee");
+        assertResultMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT, ClearCommand.MESSAGE_USAGE));
+    }
+
+    @Test
+    public void clear_all_success() {
+        //verify a non-empty list can be cleared
+        TaskType taskATaskType = td.taskA.getTaskType();
+
+        assertTrue(taskListPanel.isListMatching(taskATaskType, currentList));
+        assertClearAllCommandSuccess();
+
+        //verify other commands can work after a clear command
+        commandBox.runCommand(td.task1.getAddCommand());
+        assertTrue(taskListPanel.isListMatching(td.task1.getTaskType(), td.task1));
+        commandBox.runCommand(DeleteCommand.COMMAND_WORD + " e1");
+        assertListSize(0);
+    }
+
+    @Test
+    public void clear_success() {
+        assertClearCommandSuccess();
+    }
+
+    @Test
+    public void clear_empty_list_failure() {
+        commandBox.runCommand(ClearCommand.COMMAND_WORD);
+        commandBox.runCommand(ClearCommand.COMMAND_WORD);
+        assertResultMessage(ClearCommand.MESSAGE_NO_MORE_TASK);
+    }
+
+    @Test
+    public void clear_done_success () {
+        commandBox.runCommand(DoneCommand.COMMAND_WORD + " t1");
+        commandBox.runCommand(DoneCommand.COMMAND_WORD + " t1");
+        commandBox.runCommand(ClearCommand.COMMAND_CLEAR_DONE);
+        assertResultMessage(ClearCommand.MESSAGE_CLEAR_DONE_SUCCESS);
+        commandBox.runCommand(ListCommand.COMMAND_LIST_DONE);
+        assertListSize(0);
+    }
+
+    @Test
+    public void double_clear_done_failure() {
+        commandBox.runCommand(DoneCommand.COMMAND_WORD + " t1");
+        commandBox.runCommand(ClearCommand.COMMAND_CLEAR_DONE);
+        commandBox.runCommand(ClearCommand.COMMAND_CLEAR_DONE);
+        assertResultMessage(ClearCommand.MESSAGE_NO_MORE_DONE_TASK);
+    }
+
+    @Test
+    public void clear_undone_success () {
+        commandBox.runCommand(DoneCommand.COMMAND_WORD + " t1");
+        commandBox.runCommand(DoneCommand.COMMAND_WORD + " t1");
+        commandBox.runCommand(ClearCommand.COMMAND_CLEAR_UNDONE);
+        assertResultMessage(ClearCommand.MESSAGE_CLEAR_UNDONE_SUCCESS);
+        assertListSize(0);
+    }
+
+    @Test
+    public void double_clear_undone_failure() {
+        commandBox.runCommand(DoneCommand.COMMAND_WORD + " t1");
+        commandBox.runCommand(ClearCommand.COMMAND_CLEAR_UNDONE);
+        commandBox.runCommand(ClearCommand.COMMAND_CLEAR_UNDONE);
+        assertResultMessage(ClearCommand.MESSAGE_NO_MORE_UNDONE_TASK);
+    }
+
+    /**
+     * Runs the clear_all command and confirms the result is correct.
+     */
+    private void assertClearAllCommandSuccess() {
+        commandBox.runCommand(ClearCommand.COMMAND_CLEAR_ALL);
+        assertListSize(0);
+        assertResultMessage(ClearCommand.MESSAGE_CLEAR_ALL_SUCCESS);
+    }
+
+    /**
+     * Runs the clear command and confirms the result is correct.
+     */
+    private void assertClearCommandSuccess() {
+        commandBox.runCommand(ClearCommand.COMMAND_WORD);
+        assertListSize(0);
+        assertResultMessage(ClearCommand.MESSAGE_CLEAR_ALL_SUCCESS);
+    }
+}
+```
+###### /java/guitests/DoneCommandTest.java
+``` java
     @Test
     public void done_emptyParameter_failure() {
         commandBox.runCommand(DoneCommand.COMMAND_WORD);
@@ -36,10 +139,13 @@ public class DoneCommandTest extends ToDoListGuiTest {
     }
 
     @Test
-    public void done_success() {
+    public void done_task_success() {
         assertDoneSuccess(TaskType.DEADLINE, "d3", currentList);
     }
 
+```
+###### /java/guitests/DoneCommandTest.java
+``` java
     @Test
     public void done_doneTask_failure() {
         commandBox.runCommand(DoneCommand.COMMAND_WORD + " d1");
@@ -50,29 +156,37 @@ public class DoneCommandTest extends ToDoListGuiTest {
 
     /**
      * Runs the done command to complete the task at specified index and confirms the result is correct.
-     * @param targetIndexOneIndexed e.g. index 1 to complete the first task in the list,
+     * @param filteredTaskListIndex e.g. index e1 to complete the first task in the event list,
      * @param currentList A copy of the current list of tasks (before marking done).
      */
     private void assertDoneSuccess(TaskType taskType, String filteredTaskListIndex, TestTask[] currentList) {
         commandBox.runCommand(DoneCommand.COMMAND_WORD + " " + filteredTaskListIndex);
 
-        TestTask[] filteredTaskList = TestUtil.getTasksByTaskType(currentList, taskType);
         int testTaskIndex = TestUtil.getFilteredIndexInt(filteredTaskListIndex);
-        filteredTaskList[testTaskIndex].setIsDone(true);
+        TestTask[] filteredTaskList = TestUtil.getTasksByTaskType(currentList, taskType);
+        TestTask targetTask = filteredTaskList[testTaskIndex];
+        if (!targetTask.hasRecur()) {
+            targetTask.setIsDone(true);
+        } else {
+            TestTask newTestTask = new TaskBuilder(targetTask).build();
+            newTestTask.updateTaskRecurDate(true);
+            targetTask.setIsDone(true);
+            filteredTaskList = TestUtil.addTasksToList(currentList, newTestTask);
+        }
 
         //Assert taskListPanel correctly shows tasks left undone
         TestTask[] filteredUndoneList = TestUtil.getTasksByDoneStatus(filteredTaskList, false);
         assertTrue(taskListPanel.isListMatching(taskType, filteredUndoneList));
 
         //confirm the result message is correct
-        assertResultMessage(String.format(DoneCommand.MESSAGE_DONE_TASK_SUCCESS, filteredTaskList[testTaskIndex]));
+        assertResultMessage(String.format(DoneCommand.MESSAGE_DONE_TASK_SUCCESS, targetTask));
 
-        //Assert taskListPanel correctly shows tasks that are undone
+        //Assert taskListPanel correctly shows tasks that are done
         commandBox.runCommand(ListCommand.COMMAND_WORD + " done");
         TestTask[] filteredDoneList = TestUtil.getTasksByDoneStatus(filteredTaskList, true);
         assertTrue(taskListPanel.isListMatching(taskType, filteredDoneList));
     }
-}
+
 ```
 ###### /java/guitests/ListCommandTest.java
 ``` java
@@ -83,6 +197,12 @@ public class ListCommandTest extends ToDoListGuiTest {
     @Test
     public void list_invalidFormat_failure() {
         commandBox.runCommand(ListCommand.COMMAND_WORD + " zzzz");
+        assertResultMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT, ListCommand.MESSAGE_USAGE));
+    }
+
+    @Test
+    public void parse_short_form_success() {
+        commandBox.runCommand(ListCommand.SHORT_COMMAND_WORD + " zzzz");
         assertResultMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT, ListCommand.MESSAGE_USAGE));
     }
 
@@ -106,6 +226,9 @@ public class ListCommandTest extends ToDoListGuiTest {
         assertListAllSuccess(TaskType.EVENT, "e2", currentList, ListCommand.MESSAGE_LIST_ALL_SUCCESS);
     }
 
+```
+###### /java/guitests/ListCommandTest.java
+``` java
     /**
      * Marks a task as done. Runs the list all command and confirms the result is correct.
      * @param targetIndexOneIndexed e.g. index 1 to complete the first task in the list,
@@ -122,7 +245,15 @@ public class ListCommandTest extends ToDoListGuiTest {
         //assert taskListPanel displays correct tasks
         TestTask[] filteredTaskList = TestUtil.getTasksByTaskType(currentList, taskType);
         int testTaskIndex = TestUtil.getFilteredIndexInt(filteredTaskListIndex);
-        filteredTaskList[testTaskIndex].setIsDone(true);
+        TestTask targetTask = filteredTaskList[testTaskIndex];
+        if (!targetTask.hasRecur()) {
+            targetTask.setIsDone(true);
+        } else {
+            TestTask newTestTask = new TaskBuilder(targetTask).build();
+            newTestTask.updateTaskRecurDate(true);
+            targetTask.setIsDone(true);
+            filteredTaskList = TestUtil.addTasksToList(currentList, newTestTask);
+        }
         assertTrue(taskListPanel.isListMatching(taskType, filteredTaskList));
         assertResultMessage(expectedFeedbackMessage);
 
@@ -144,13 +275,22 @@ public class ListCommandTest extends ToDoListGuiTest {
         //assert taskListPanel displays correct tasks
         TestTask[] filteredTaskList = TestUtil.getTasksByTaskType(currentList, taskType);
         int testTaskIndex = TestUtil.getFilteredIndexInt(filteredTaskListIndex);
-        filteredTaskList[testTaskIndex].setIsDone(true);
+        TestTask targetTask = filteredTaskList[testTaskIndex];
+        if (!targetTask.hasRecur()) {
+            targetTask.setIsDone(true);
+        } else {
+            TestTask newTestTask = new TaskBuilder(targetTask).build();
+            newTestTask.updateTaskRecurDate(true);
+            targetTask.setIsDone(true);
+            filteredTaskList = TestUtil.addTasksToList(currentList, newTestTask);
+        }
         TestTask[] filteredResultList = TestUtil.getTasksByDoneStatus(filteredTaskList, isDone);
         assertTrue(taskListPanel.isListMatching(taskType, filteredResultList));
         assertResultMessage(expectedFeedbackMessage);
     }
 
-}
+
+
 ```
 ###### /java/guitests/RedoCommandTest.java
 ``` java
@@ -199,6 +339,20 @@ public class RedoCommandTest extends ToDoListGuiTest {
     }
 
     @Test
+    public void redo_undo_add_with_menu_success() {
+        TestTask taskToAdd = td.task1;
+        commandBox.runCommand(taskToAdd.getAddCommand());
+        commandBox.runCommand(UndoCommand.COMMAND_WORD);
+        mainMenu.executeRedoWithMenu();
+
+        TestTask[] expectedList = TestUtil.addTasksToList(currentList, taskToAdd);
+        assertTrue(taskListPanel.isListMatching(taskToAdd.getTaskType(), expectedList));
+
+        String feedbackMessage = String.format(AddCommand.COMMAND_WORD.concat(COMMAND_FORMATTER), taskToAdd);
+        assertResultMessage(RedoCommand.COMMAND_WORD + " successfully.\n" + feedbackMessage);
+    }
+
+    @Test
     public void redo_undo_delete_success () {
         commandBox.runCommand(DeleteCommand.COMMAND_WORD + " e2");
         commandBox.runCommand(UndoCommand.COMMAND_WORD);
@@ -235,16 +389,63 @@ public class RedoCommandTest extends ToDoListGuiTest {
         commandBox.runCommand(RedoCommand.COMMAND_WORD);
 
         TestTask[] filteredTaskList = TestUtil.getTasksByTaskType(currentList, TaskType.DEADLINE);
-        filteredTaskList[1].setIsDone(true);
+        int testTaskIndex = TestUtil.getFilteredIndexInt("d2");
+
+        TestTask targetTask = filteredTaskList[testTaskIndex];
+        if (!targetTask.hasRecur()) {
+            targetTask.setIsDone(true);
+        } else {
+            TestTask newTestTask = new TaskBuilder(targetTask).build();
+            newTestTask.updateTaskRecurDate(true);
+            targetTask.setIsDone(true);
+            filteredTaskList = TestUtil.addTasksToList(currentList, newTestTask);
+        }
         TestTask[] filteredUndoneList = TestUtil.getTasksByDoneStatus(filteredTaskList, false);
         assertTrue(taskListPanel.isListMatching(TaskType.DEADLINE, filteredUndoneList));
 
-        String feedbackMessage = String.format(DoneCommand.COMMAND_WORD.concat(COMMAND_FORMATTER), filteredTaskList[1]);
+        String feedbackMessage = String.format(DoneCommand.COMMAND_WORD.concat(COMMAND_FORMATTER),
+                targetTask);
         assertResultMessage(RedoCommand.COMMAND_WORD + " successfully.\n" + feedbackMessage);
     }
 
     @Test
-    public void redo_undo_clear_success() {
+    public void redo_undo_undone_success() {
+        commandBox.runCommand(DoneCommand.COMMAND_WORD + " t1");
+        commandBox.runCommand(ListCommand.COMMAND_LIST_DONE);
+        commandBox.runCommand(UndoneCommand.COMMAND_WORD + " t1");
+        commandBox.runCommand(ListCommand.COMMAND_WORD);
+        commandBox.runCommand(UndoCommand.COMMAND_WORD);
+        commandBox.runCommand(RedoCommand.COMMAND_WORD);
+        assertTrue(taskListPanel.isListMatching(TaskType.TODO, currentList));
+
+        String feedbackMessage = String.format(UndoneCommand.COMMAND_WORD.concat(COMMAND_FORMATTER),
+                td.taskG);
+        assertResultMessage(RedoCommand.COMMAND_WORD + " successfully.\n" + feedbackMessage);
+    }
+
+    @Test
+    public void redo_undo_clear_done_success() {
+        commandBox.runCommand(DoneCommand.COMMAND_WORD + " t1");
+        commandBox.runCommand(ListCommand.COMMAND_LIST_DONE);
+        commandBox.runCommand(ClearCommand.COMMAND_CLEAR_DONE);
+        commandBox.runCommand(UndoCommand.COMMAND_WORD);
+        commandBox.runCommand(RedoCommand.COMMAND_WORD);
+        assertListSize(0);
+        assertResultMessage(RedoCommand.COMMAND_WORD + " successfully.\n" + ClearCommand.MESSAGE_CLEAR_DONE_SUCCESS);
+    }
+
+    @Test
+    public void redo_undo_clear_undone_success() {
+        commandBox.runCommand(DoneCommand.COMMAND_WORD + " t1");
+        commandBox.runCommand(ClearCommand.COMMAND_CLEAR_UNDONE);
+        commandBox.runCommand(UndoCommand.COMMAND_WORD);
+        commandBox.runCommand(RedoCommand.COMMAND_WORD);
+        assertListSize(0);
+        assertResultMessage(RedoCommand.COMMAND_WORD + " successfully.\n" + ClearCommand.MESSAGE_CLEAR_UNDONE_SUCCESS);
+    }
+
+    @Test
+    public void redo_undo_clear_all_success() {
         commandBox.runCommand(ClearCommand.COMMAND_WORD);
         commandBox.runCommand(UndoCommand.COMMAND_WORD);
         commandBox.runCommand(RedoCommand.COMMAND_WORD);
@@ -254,7 +455,7 @@ public class RedoCommandTest extends ToDoListGuiTest {
         assertTrue(taskListPanel.isListMatching(TaskType.DEADLINE, emptyList));
         assertTrue(taskListPanel.isListMatching(TaskType.TODO, emptyList));
 
-        assertResultMessage(RedoCommand.COMMAND_WORD + " successfully.\n" + ClearCommand.MESSAGE_SUCCESS);
+        assertResultMessage(RedoCommand.COMMAND_WORD + " successfully.\n" + ClearCommand.MESSAGE_CLEAR_ALL_SUCCESS);
     }
 }
 ```
@@ -265,7 +466,7 @@ public class UndoCommandTest extends ToDoListGuiTest {
     TestTask[] currentList = td.getTypicalTasks();
 
     @Test
-    public void undo_noCommand_failure () {
+    public void undo_noCommandHistory_failure () {
         commandBox.runCommand(DeleteCommand.COMMAND_WORD + " e2");
         commandBox.runCommand(UndoCommand.COMMAND_WORD);
         commandBox.runCommand(UndoCommand.COMMAND_WORD);
@@ -280,12 +481,23 @@ public class UndoCommandTest extends ToDoListGuiTest {
         assertTrue(taskListPanel.isListMatching(taskToAdd.getTaskType(), currentList));
 
         String feedbackMessage = String.format(DeleteCommand.COMMAND_WORD.concat(COMMAND_FORMATTER), taskToAdd);
-        assertResultMessage(UndoCommand.COMMAND_WORD + " successfully.\n" + feedbackMessage);
+        assertResultMessage(UndoCommand.RESULT_SUCCESS + feedbackMessage);
+    }
+
+    @Test
+    public void undo_with_menu_success() {
+        TestTask taskToAdd = td.task1;
+        commandBox.runCommand(taskToAdd.getAddCommand());
+        mainMenu.executeUndoWithMenu();
+
+        assertTrue(taskListPanel.isListMatching(taskToAdd.getTaskType(), currentList));
+        String feedbackMessage = String.format(DeleteCommand.COMMAND_WORD.concat(COMMAND_FORMATTER), taskToAdd);
+        assertResultMessage(UndoCommand.RESULT_SUCCESS + feedbackMessage);
     }
 
     @Test
     public void undo_failedAdd_failure() {
-        commandBox.runCommand(AddCommand.COMMAND_WORD + " " + td.taskA.getName());
+        commandBox.runCommand(AddCommand.COMMAND_WORD + " ");
         commandBox.runCommand(UndoCommand.COMMAND_WORD);
         assertResultMessage(MESSAGE_EMPTYUNDOHISTORY);
     }
@@ -297,7 +509,7 @@ public class UndoCommandTest extends ToDoListGuiTest {
         assertTrue(taskListPanel.isListMatching(TaskType.EVENT, currentList));
 
         String feedbackMessage = String.format(AddCommand.COMMAND_WORD.concat(COMMAND_FORMATTER), td.taskB);
-        assertResultMessage(UndoCommand.COMMAND_WORD + " successfully.\n" + feedbackMessage);
+        assertResultMessage(UndoCommand.RESULT_SUCCESS + feedbackMessage);
     }
 
     @Test
@@ -315,7 +527,7 @@ public class UndoCommandTest extends ToDoListGuiTest {
         assertTrue(taskListPanel.isListMatching(TaskType.EVENT, currentList));
 
         String feedbackMessage = String.format("Restore Task".concat(COMMAND_FORMATTER), td.taskA);
-        assertResultMessage(UndoCommand.COMMAND_WORD + " successfully.\n" + feedbackMessage);
+        assertResultMessage(UndoCommand.RESULT_SUCCESS + feedbackMessage);
     }
 
     @Test
@@ -327,7 +539,7 @@ public class UndoCommandTest extends ToDoListGuiTest {
 
     @Test
     public void undo_failedEdit_addRepeatedTask_failure() {
-        commandBox.runCommand(EditCommand.COMMAND_WORD + " e1 " + td.taskD.getName());
+        commandBox.runCommand(EditCommand.COMMAND_WORD + " e1");
         commandBox.runCommand(UndoCommand.COMMAND_WORD);
         assertResultMessage(MESSAGE_EMPTYUNDOHISTORY);
     }
@@ -338,8 +550,8 @@ public class UndoCommandTest extends ToDoListGuiTest {
         commandBox.runCommand(UndoCommand.COMMAND_WORD);
         assertTrue(taskListPanel.isListMatching(TaskType.DEADLINE, currentList));
 
-        String feedbackMessage = String.format("Undone".concat(COMMAND_FORMATTER), td.taskD);
-        assertResultMessage(UndoCommand.COMMAND_WORD + " successfully.\n" + feedbackMessage);
+        String feedbackMessage = String.format(UndoneCommand.COMMAND_WORD.concat(COMMAND_FORMATTER), td.taskD);
+        assertResultMessage(UndoCommand.RESULT_SUCCESS + feedbackMessage);
     }
 
     @Test
@@ -350,13 +562,50 @@ public class UndoCommandTest extends ToDoListGuiTest {
     }
 
     @Test
-    public void undo_clear_success() {
+    public void undo_undone_sucess() {
+        commandBox.runCommand(DoneCommand.COMMAND_WORD + " t1");
+        commandBox.runCommand(ListCommand.COMMAND_LIST_DONE);
+        commandBox.runCommand(UndoneCommand.COMMAND_WORD + " t1");
+        commandBox.runCommand(UndoCommand.COMMAND_WORD);
+
+        TestTask[] expectedRemainder = {td.taskG};
+        assertTrue(taskListPanel.isListMatching(TaskType.TODO, expectedRemainder));
+        String feedbackMessage = String.format(DoneCommand.COMMAND_WORD.concat(COMMAND_FORMATTER), td.taskG);
+        assertResultMessage(UndoCommand.RESULT_SUCCESS + feedbackMessage);
+    }
+
+    @Test
+    public void undo_clear_done_success() {
+        commandBox.runCommand(DoneCommand.COMMAND_WORD + " t1");
+        commandBox.runCommand(DoneCommand.COMMAND_WORD + " t1");
+        commandBox.runCommand(ClearCommand.COMMAND_CLEAR_DONE);
+        commandBox.runCommand(UndoCommand.COMMAND_WORD);
+
+        TestTask[] expectedRemainder = {td.taskI};
+        assertTrue(taskListPanel.isListMatching(TaskType.TODO, expectedRemainder));
+        assertResultMessage(UndoCommand.RESULT_SUCCESS + ClearCommand.MESSAGE_UNDO_CLEAR_DONE_SUCCESS);
+    }
+
+    @Test
+    public void undo_clear_undone_success() {
+        commandBox.runCommand(DoneCommand.COMMAND_WORD + " t1");
+        commandBox.runCommand(DoneCommand.COMMAND_WORD + " t1");
+        commandBox.runCommand(ClearCommand.COMMAND_CLEAR_UNDONE);
+        commandBox.runCommand(UndoCommand.COMMAND_WORD);
+
+        TestTask[] expectedRemainder = {td.taskI};
+        assertTrue(taskListPanel.isListMatching(TaskType.TODO, expectedRemainder));
+        assertResultMessage(UndoCommand.RESULT_SUCCESS + ClearCommand.MESSAGE_UNDO_CLEAR_UNDONE_SUCCESS);
+    }
+
+    @Test
+    public void undo_clear_all_success() {
         commandBox.runCommand(ClearCommand.COMMAND_WORD);
         commandBox.runCommand(UndoCommand.COMMAND_WORD);
         assertTrue(taskListPanel.isListMatching(TaskType.EVENT, currentList));
         assertTrue(taskListPanel.isListMatching(TaskType.DEADLINE, currentList));
         assertTrue(taskListPanel.isListMatching(TaskType.TODO, currentList));
-        assertResultMessage(UndoCommand.COMMAND_WORD + " successfully.\n" + "Restore OneTwoDo");
+        assertResultMessage(UndoCommand.RESULT_SUCCESS + ClearCommand.MESSAGE_UNDO_CLEAR_ALL_SUCCESS);
     }
 }
 ```
